@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023-2024 "Neo4j,"
+ * Copyright (c) 2023-2025 "Neo4j,"
  * Neo4j Sweden AB [https://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -25,38 +25,196 @@ import java.sql.DatabaseMetaData;
 import java.sql.ResultSet;
 import java.sql.RowIdLifetime;
 import java.sql.SQLException;
-import java.sql.SQLFeatureNotSupportedException;
 import java.sql.Types;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.neo4j.jdbc.internal.bolt.response.PullResponse;
-import org.neo4j.jdbc.internal.bolt.response.ResultSummary;
-import org.neo4j.jdbc.internal.bolt.response.RunResponse;
+import org.neo4j.jdbc.Neo4jTransaction.PullResponse;
+import org.neo4j.jdbc.Neo4jTransaction.ResultSummary;
+import org.neo4j.jdbc.Neo4jTransaction.RunResponse;
+import org.neo4j.jdbc.translator.spi.View;
 import org.neo4j.jdbc.values.Record;
+import org.neo4j.jdbc.values.Type;
 import org.neo4j.jdbc.values.Value;
 import org.neo4j.jdbc.values.Values;
 
+import static org.neo4j.jdbc.Neo4jException.withReason;
+
 /**
  * Internal implementation for providing Neo4j specific database metadata.
+ * <p>
+ * PostgreSQL and SQL Standard way of defining Catalogs and Schema:
+ *
+ * <ul>
+ * <li>A computer may have one cluster or multiple.</li>
+ * <li>A database server is a cluster.</li>
+ * <li>A cluster has catalogs. ( Catalog = Database )</li>
+ * <li>Catalogs have schemas. (Schema = namespace of tables, and security boundary)</li>
+ * <li>Schemas have tables</li>
+ * <li>Tables have rows</li>
+ * <li>Rows have values, defined by columns</li>
+ * </ul>
+ * From this excellent <a href="https://stackoverflow.com/a/17943883/1547989">answer</a>.
  *
  * @author Michael J. Simons
  * @author Conor Watson
  * @since 6.0.0
  */
-final class DatabaseMetadataImpl implements DatabaseMetaData {
+final class DatabaseMetadataImpl implements Neo4jDatabaseMetaData {
 
 	private static final Properties QUERIES;
+
+	private static final String COL_TABLE_NAME = "TABLE_NAME";
+
+	private static final String COL_TABLE_CAT = "TABLE_CAT";
+
+	private static final String COL_TABLE_SCHEM = "TABLE_SCHEM";
+
+	private static final String COL_COLUMN_NAME = "COLUMN_NAME";
+
+	private static final String COL_GRANTOR = "GRANTOR";
+
+	private static final String COL_GRANTEE = "GRANTEE";
+
+	private static final String COL_PRIVILEGE = "PRIVILEGE";
+
+	private static final String COL_IS_GRANTABLE = "IS_GRANTABLE";
+
+	private static final String COL_SCOPE = "SCOPE";
+
+	private static final String COL_DATA_TYPE = "DATA_TYPE";
+
+	private static final String COL_TYPE_NAME = "TYPE_NAME";
+
+	private static final String COL_COLUMN_SIZE = "COLUMN_SIZE";
+
+	private static final String COL_BUFFER_LENGTH = "BUFFER_LENGTH";
+
+	private static final String COL_DECIMAL_DIGITS = "DECIMAL_DIGITS";
+
+	private static final String COL_PSEUDO_COLUMN = "PSEUDO_COLUMN";
+
+	private static final String COL_TABLE_CATALOG = "TABLE_CATALOG";
+
+	private static final String COL_KEY_SEQ = "KEY_SEQ";
+
+	private static final String COL_PK_NAME = "PK_NAME";
+
+	private static final String COL_PKTABLE_CAT = "PKTABLE_CAT";
+
+	private static final String COL_PKTABLE_SCHEM = "PKTABLE_SCHEM";
+
+	private static final String COL_PKTABLE_NAME = "PKTABLE_NAME";
+
+	private static final String COL_PKCOLUMN_NAME = "PKCOLUMN_NAME";
+
+	private static final String COL_FKTABLE_CAT = "FKTABLE_CAT";
+
+	private static final String COL_FKTABLE_SCHEM = "FKTABLE_SCHEM";
+
+	private static final String COL_FKTABLE_NAME = "FKTABLE_NAME";
+
+	private static final String COL_FKCOLUMN_NAME = "FKCOLUMN_NAME";
+
+	private static final String COL_UPDATE_RULE = "UPDATE_RULE";
+
+	private static final String COL_DELETE_RULE = "DELETE_RULE";
+
+	private static final String COL_FK_NAME = "FK_NAME";
+
+	private static final String COL_DEFERRABILITY = "DEFERRABILITY";
+
+	private static final String COL_PRECISION = "PRECISION";
+
+	private static final String COL_LITERAL_PREFIX = "LITERAL_PREFIX";
+
+	private static final String COL_LITERAL_SUFFIX = "LITERAL_SUFFIX";
+
+	private static final String COL_CREATE_PARAMS = "CREATE_PARAMS";
+
+	private static final String COL_AUTO_INCREMENT = "AUTO_INCREMENT";
+
+	private static final String COL_SQL_DATETIME_SUB = "SQL_DATETIME_SUB";
+
+	private static final String COL_FIXED_PREC_SCALE = "FIXED_PREC_SCALE";
+
+	private static final String COL_UNSIGNED_ATTRIBUTE = "UNSIGNED_ATTRIBUTE";
+
+	private static final String COL_MAXIMUM_SCALE = "MAXIMUM_SCALE";
+
+	private static final String COL_SQL_DATA_TYPE = "SQL_DATA_TYPE";
+
+	private static final String COL_NUM_PREC_RADIX = "NUM_PREC_RADIX";
+
+	private static final String COL_LOCAL_TYPE_NAME = "LOCAL_TYPE_NAME";
+
+	private static final String COL_NULLABLE = "NULLABLE";
+
+	private static final String COL_CASE_SENSITIVE = "CASE_SENSITIVE";
+
+	private static final String COL_MINIMUM_SCALE = "MINIMUM_SCALE";
+
+	private static final String COL_SEARCHABLE = "SEARCHABLE";
+
+	private static final String COL_TYPE_SCHEM = "TYPE_SCHEM";
+
+	private static final String COL_TYPE_CAT = "TYPE_CAT";
+
+	private static final String COL_SUPERTYPE_CAT = "SUPERTYPE_CAT";
+
+	private static final String COL_SUPERTYPE_SCHEM = "SUPERTYPE_SCHEM";
+
+	private static final String COL_SUPERTYPE_NAME = "SUPERTYPE_NAME";
+
+	private static final String COL_SUPERTABLE_NAME = "SUPERTABLE_NAME";
+
+	private static final String COL_ATTR_SIZE = "ATTR_SIZE";
+
+	private static final String COL_SCOPE_SCHEMA = "SCOPE_SCHEMA";
+
+	private static final String COL_SCOPE_TABLE = "SCOPE_TABLE";
+
+	private static final String COL_CHAR_OCTET_LENGTH = "CHAR_OCTET_LENGTH";
+
+	private static final String COL_SOURCE_DATA_TYPE = "SOURCE_DATA_TYPE";
+
+	private static final String COL_ORDINAL_POSITION = "ORDINAL_POSITION";
+
+	private static final String COL_IS_NULLABLE = "IS_NULLABLE";
+
+	private static final String COL_REMARKS = "REMARKS";
+
+	private static final String COL_ATTR_NAME = "ATTR_NAME";
+
+	private static final String COL_ATTR_TYPE_NAME = "ATTR_TYPE_NAME";
+
+	private static final String COL_SCOPE_CATALOG = "SCOPE_CATALOG";
+
+	private static final String COL_ATTR_DEF = "ATTR_DEF";
+
+	private static final String COL_COLUMN_USAGE = "COLUMN_USAGE";
+
+	private static final String DEFAULT_SCHEMA = "public";
 
 	static {
 		QUERIES = new Properties();
@@ -79,19 +237,69 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	private static final List<String> TIME_DATE_FUNCTIONS = List.of("date", "datetime", "localdatetime", "localtime",
 			"time", "duration");
 
+	private static final List<ClientInfoProperty> SUPPORTED_CLIENT_INFO_PROPERTIES = List.of(
+			new ClientInfoProperty("ApplicationName", "The name of the application currently utilizing the connection"),
+			new ClientInfoProperty("ClientUser",
+					"The name of the user that the application using the connection is performing work for"),
+			new ClientInfoProperty("ClientHostname",
+					"The hostname of the computer the application using the connection is running on"));
+
 	private static final Logger LOGGER = Logger.getLogger(DatabaseMetadataImpl.class.getCanonicalName());
 
 	private final Connection connection;
 
-	private final Neo4jTransactionSupplier transactionSupplier;
-
 	private final boolean automaticSqlTranslation;
 
-	DatabaseMetadataImpl(Connection connection, Neo4jTransactionSupplier transactionSupplier,
-			boolean automaticSqlTranslation) {
+	private final int relationshipSampleSize;
+
+	private final Lazy<Boolean> apocAvailable;
+
+	private final Lazy<String> userName;
+
+	private final Lazy<Boolean> readOnly;
+
+	private final Map<GetTablesCacheKey, GetTablesCacheValue> tablesCache = new ConcurrentHashMap<>();
+
+	private final Map<String, View> views;
+
+	DatabaseMetadataImpl(Connection connection, boolean automaticSqlTranslation, int relationshipSampleSize,
+			Collection<View> views) {
 		this.connection = connection;
-		this.transactionSupplier = Objects.requireNonNull(transactionSupplier);
 		this.automaticSqlTranslation = automaticSqlTranslation;
+		this.relationshipSampleSize = relationshipSampleSize;
+
+		this.apocAvailable = Lazy.of(this::isApocAvailable0);
+		// Those queries use administrative commands that do not compose with normal
+		// queries, so we cache it here and hope for the best they don't interfere with
+		// other queries.
+		this.userName = Lazy.of(() -> {
+			var response = doQueryForPullResponse(getRequest("getUserName"));
+			return response.records().get(0).get(0).asString();
+		});
+		this.readOnly = Lazy.of(() -> {
+			var response = doQueryForPullResponse(getRequest("isReadOnly", "name", this.getSingleCatalog()));
+			return response.records().get(0).get(0).asBoolean();
+		});
+		this.views = views.stream().collect(Collectors.toMap(View::name, Function.identity(), (v1, v2) -> {
+			throw new IllegalArgumentException("Duplicate name for Cypher-backed view " + v1);
+		}, TreeMap::new));
+	}
+
+	boolean isApocAvailable() {
+		return this.apocAvailable.resolve();
+	}
+
+	private boolean isApocAvailable0() {
+		try {
+			var response = doQueryForPullResponse(new Request(
+					"SHOW FUNCTIONS YIELD name WHERE name = 'apoc.version' RETURN count(*) >= 1 AS available",
+					Map.of()));
+			var records = response.records();
+			return records.size() == 1 && records.get(0).get("available").asBoolean();
+		}
+		catch (SQLException ex) {
+			return false;
+		}
 	}
 
 	static Request getRequest(String queryName, Object... keyAndValues) {
@@ -128,24 +336,23 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public boolean allTablesAreSelectable() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public boolean allTablesAreSelectable() {
+		return true;
 	}
 
 	@Override
 	public String getURL() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+		return this.connection.unwrap(Neo4jConnection.class).getDatabaseURL().toString();
 	}
 
 	@Override
 	public String getUserName() throws SQLException {
-		var response = doQueryForPullResponse(getRequest("getUserName"));
-		return response.records().get(0).get(0).asString();
+		return this.userName.resolveThrowing(SQLException.class);
 	}
 
 	@Override
 	public boolean isReadOnly() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+		return this.readOnly.resolveThrowing(SQLException.class);
 	}
 
 	// Wrt ordering see
@@ -258,7 +465,7 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public boolean storesMixedCaseQuotedIdentifiers() throws SQLException {
+	public boolean storesMixedCaseQuotedIdentifiers() {
 		return true;
 	}
 
@@ -399,7 +606,7 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public boolean supportsMinimumSQLGrammar() throws SQLException {
+	public boolean supportsMinimumSQLGrammar() {
 		return this.automaticSqlTranslation;
 	}
 
@@ -472,7 +679,7 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 
 	@Override
 	public String getCatalogTerm() {
-		return "catalog";
+		return "database";
 	}
 
 	@Override
@@ -611,43 +818,43 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public int getMaxBinaryLiteralLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxBinaryLiteralLength() {
+		return 0; // No limit or unknown
 	}
 
 	@Override
-	public int getMaxCharLiteralLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxCharLiteralLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxColumnNameLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxColumnNameLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxColumnsInGroupBy() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxColumnsInGroupBy() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxColumnsInIndex() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxColumnsInIndex() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxColumnsInOrderBy() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxColumnsInOrderBy() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxColumnsInSelect() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxColumnsInSelect() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxColumnsInTable() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxColumnsInTable() {
+		return 0;
 	}
 
 	@Override
@@ -662,38 +869,38 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public int getMaxCursorNameLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxCursorNameLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxIndexLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxIndexLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxSchemaNameLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxSchemaNameLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxProcedureNameLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxProcedureNameLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxCatalogNameLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxCatalogNameLength() {
+		return 63;
 	}
 
 	@Override
-	public int getMaxRowSize() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxRowSize() {
+		return 0;
 	}
 
 	@Override
-	public boolean doesMaxRowSizeIncludeBlobs() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public boolean doesMaxRowSizeIncludeBlobs() {
+		return true;
 	}
 
 	@Override
@@ -702,18 +909,18 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public int getMaxStatements() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxStatements() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxTableNameLength() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxTableNameLength() {
+		return 0;
 	}
 
 	@Override
-	public int getMaxTablesInSelect() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public int getMaxTablesInSelect() {
+		return 0;
 	}
 
 	@Override
@@ -778,7 +985,7 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		assertSchemaIsPublicOrNull(schemaPattern);
 
 		var request = getRequest("getProcedures", "name", procedureNamePattern, "procedureType",
-				DatabaseMetaData.procedureResultUnknown);
+				DatabaseMetaData.procedureResultUnknown, "catalogAsParameterWorkaround", getSingleCatalog());
 		return doQueryForResultSet(request);
 	}
 
@@ -793,7 +1000,8 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 
 		var request = getRequest("getProcedureColumns", "results", intermediateResults, "columnNamePattern",
 				columnNamePattern, "columnType", DatabaseMetaData.procedureColumnIn, "nullable",
-				DatabaseMetaData.procedureNullableUnknown);
+				DatabaseMetaData.procedureNullableUnknown, "catalogAsParameterWorkaround", getSingleCatalog(),
+				"returnType", DatabaseMetaData.procedureColumnResult);
 		return doQueryForResultSet(request);
 	}
 
@@ -804,64 +1012,80 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		assertSchemaIsPublicOrNull(schemaPattern);
 		assertCatalogIsNullOrEmpty(catalog);
 
-		var request = getRequest("getTables", "name",
-				(tableNamePattern != null) ? tableNamePattern.replace("%", ".*") : null);
-		return doQueryForResultSet(request);
+		try {
+			var key = new GetTablesCacheKey(catalog, schemaPattern, tableNamePattern, types);
+			var result = this.tablesCache.computeIfAbsent(key, this::getTables0);
+			// We cannot cache the result set, as any proper usage would close it for
+			// good, and it's much harder to dig down into the implementation and prevent
+			// closing it on a case base case basis than just recreating it
+			return new LocalStatementImpl(this.connection, result.runResponse, result.pullResponse).getResultSet();
+		}
+		catch (UncheckedSQLException ex) {
+			throw ex.getCause();
+		}
+	}
+
+	private GetTablesCacheValue getTables0(GetTablesCacheKey key) {
+
+		var tableNamePattern = key.tableNamePattern();
+		var types = key.types();
+
+		var request = getRequest(isApocAvailable() ? "getTablesApoc" : "getTablesFallback", "name",
+				(tableNamePattern != null) ? tableNamePattern.replace("%", ".*") : null, "sampleSize",
+				this.relationshipSampleSize, "types", types, "views", this.views.keySet());
+
+		try (var resultSet = doQueryForResultSet(request)) {
+			return GetTablesCacheValue.of(resultSet);
+		}
+		catch (SQLException ex) {
+			throw new UncheckedSQLException(ex);
+		}
 	}
 
 	@Override
-	public ResultSet getSchemas() {
-		var keys = new ArrayList<String>();
-		keys.add("TABLE_SCHEM");
-		keys.add("TABLE_CATALOG");
+	public ResultSet getCatalogs() throws SQLException {
 
-		var response = createRunResponseForStaticKeys(keys);
-		var staticPulLResponse = staticPullResponseFor(keys,
-				Collections.singletonList(new Value[] { Values.value("public"), Values.value("") }));
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), response, staticPulLResponse,
-				-1, -1, -1);
-	}
-
-	/***
-	 * Returns an empty Result set as there cannot be Catalogs in neo4j.
-	 * @return all catalogs
-	 */
-	@Override
-	public ResultSet getCatalogs() {
-		var keys = new ArrayList<String>();
-		keys.add("TABLE_CAT");
-
-		var pull = createEmptyPullResponse();
-
-		var response = createRunResponseForStaticKeys(keys);
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), response, pull, -1, -1, -1);
-
+		return doQueryForResultSet(getRequest("getCatalogs"));
 	}
 
 	@Override
-	public ResultSet getTableTypes() {
+	public ResultSet getTableTypes() throws SQLException {
 		var keys = new ArrayList<String>();
 		keys.add("TABLE_TYPE");
 
-		var response = createRunResponseForStaticKeys(keys);
-		var pull = staticPullResponseFor(keys, Collections.singletonList(new Value[] { Values.value("TABLE") }));
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), response, pull, -1, -1, -1);
+		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = staticPullResponseFor(keys, List.of(new Value[] { Values.value("TABLE") },
+				new Value[] { Values.value("RELATIONSHIP") }, new Value[] { Values.value("CBV") }));
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
 	}
 
-	static int getMaxPrecision(int type) {
-		if (type == Types.INTEGER) {
+	static Value getMaxPrecision(int type) {
+		if (type == Types.BIGINT) {
 			// 64bit;
-			return 19;
+			return Values.value(19);
 		}
-		if (type == Types.FLOAT) {
+		if (type == Types.INTEGER) {
+			return Values.value(10);
+		}
+		if (type == Types.DOUBLE) {
 			// 64bit double,
 			// https://stackoverflow.com/questions/322749/retain-precision-with-double-in-java
 			// Neo4j has no fixed point arithmetic, so it's kinda guess work.
-			return 15;
+			return Values.value(15);
 		}
-		return 0;
+		return Values.NULL;
 	}
 
+	private Stream<Map<String, String>> getViewColumns() {
+		return this.views.values()
+			.stream()
+			.flatMap(view -> view.columns()
+				.stream()
+				.map(column -> Map.of("viewName", view.name(), "propertyName", column.name(), "propertyType",
+						column.type())));
+	}
+
+	@SuppressWarnings("squid:S3776") // Yep, this is complex.
 	@Override
 	public ResultSet getColumns(String catalog, String schemaPattern, String tableNamePattern, String columnNamePattern)
 			throws SQLException {
@@ -869,13 +1093,18 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		assertCatalogIsNullOrEmpty(catalog);
 		assertSchemaIsPublicOrNull(schemaPattern);
 
+		columnNamePattern = (columnNamePattern != null) ? columnNamePattern.replace("%", ".*") : columnNamePattern;
 		var request = getRequest("getColumns", "name",
 				(tableNamePattern != null) ? tableNamePattern.replace("%", ".*") : tableNamePattern, "column_name",
-				(columnNamePattern != null) ? columnNamePattern.replace("%", ".*") : columnNamePattern);
-		var pullResponse = doQueryForPullResponse(request);
-		var records = pullResponse.records();
+				columnNamePattern, "sampleSize", this.relationshipSampleSize, "viewColumns", getViewColumns());
+		var innerColumnsResponse = doQueryForPullResponse(request);
+		var records = innerColumnsResponse.records();
 
-		var rows = new ArrayList<Value[]>();
+		var rows = new LinkedList<Value[]>();
+
+		var columnPerLabel = new HashMap<Value, Set<Value>>();
+
+		var cbvs = new HashSet<Value>();
 
 		for (Record record : records) {
 
@@ -887,12 +1116,19 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 			}
 
 			var nodeLabels = record.get(0);
+			Value labelsOrTypes = nodeLabels;
+			var tableType = record.get("TABLE_TYPE").asString();
+			if ("RELATIONSHIP".equals(tableType)) {
+				// This column contains the flat rel type, so that we don't have to strip
+				// away start / end node again.
+				labelsOrTypes = Values.value(List.of(record.get("relationshipType").asString()));
+			}
 			var propertyTypeList = propertyTypes.asList(propertyType -> propertyType);
 			var propertyType = getTypeFromList(propertyTypeList, propertyName.asString());
 
 			var NULLABLE = DatabaseMetaData.columnNullable;
 			var IS_NULLABLE = "YES";
-			var innerRequest = getRequest("getColumns.nullability", "nodeLabels", nodeLabels, "propertyName",
+			var innerRequest = getRequest("getColumns.nullability", "nodeLabels", labelsOrTypes, "propertyName",
 					propertyName);
 			try (var result = doQueryForResultSet(innerRequest)) {
 				result.next();
@@ -904,44 +1140,91 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 
 			var nodeLabelList = nodeLabels.asList(Function.identity());
 			for (Value nodeLabel : nodeLabelList) {
-				var values = new ArrayList<Value>();
-				values.add(Values.NULL); // TABLE_CAT
-				values.add(Values.value("public")); // TABLE_SCHEM is always public
-				values.add(nodeLabel); // TABLE_NAME
-				values.add(propertyName); // COLUMN_NAME
-				var columnType = Neo4jConversions.toSqlTypeFromOldCypherType(propertyType.asString());
-				values.add(Values.value(columnType)); // DATA_TYPE
-				values.add(Values.value(Neo4jConversions.oldCypherTypesToNew(propertyType.asString()))); // TYPE_NAME
-				var maxPrecision = getMaxPrecision(columnType);
-				values.add((maxPrecision != 0) ? Values.value(maxPrecision) : Values.NULL); // COLUMN_SIZE
-				values.add(Values.NULL); // BUFFER_LENGTH
-				values.add(Values.NULL); // DECIMAL_DIGITS
-				values.add(Values.value(2)); // NUM_PREC_RADIX
-				values.add(Values.value(NULLABLE));
-				values.add(Values.NULL); // REMARKS
-				values.add(Values.NULL); // COLUMN_DEF
-				values.add(Values.NULL); // SQL_DATA_TYPE - unused
-				values.add(Values.NULL); // SQL_DATETIME_SUB
-				values.add(Values.NULL); // CHAR_OCTET_LENGTH
-				values.add(Values.value(nodeLabelList.indexOf(nodeLabel))); // ORDINAL_POSITION
-				values.add(Values.value(IS_NULLABLE));
-				values.add(Values.NULL); // SCOPE_CATALOG
-				values.add(Values.NULL); // SCOPE_SCHEMA
-				values.add(Values.NULL); // SCOPE_TABLE
-				values.add(Values.NULL); // SOURCE_DATA_TYPE
-				values.add(Values.value("NO")); // IS_AUTOINCREMENT
-				values.add(Values.value("NO")); // IS_GENERATEDCOLUMN
+				// Avoid duplicates while unrolling
+				var properties = columnPerLabel.computeIfAbsent(nodeLabel, i -> new HashSet<>());
+				if (properties.contains(propertyName)) {
+					continue;
+				}
+				properties.add(propertyName);
 
+				var values = addColumn(nodeLabel, propertyName, propertyType, NULLABLE, IS_NULLABLE,
+						nodeLabelList.indexOf(nodeLabel) + 1, false);
 				rows.add(values.toArray(Value[]::new));
+				if ("CBV".equals(tableType)) {
+					cbvs.add(nodeLabel);
+				}
+			}
+		}
+
+		if (columnPerLabel.isEmpty()) {
+			var tables = getTables(catalog, schemaPattern, tableNamePattern, null);
+			while (tables.next()) {
+				columnPerLabel.put(tables.getObject(COL_TABLE_NAME, Value.class), new HashSet<>());
+			}
+		}
+
+		// Add artificial element ids, except for Cypher-backed views
+		for (Value v : columnPerLabel.keySet()) {
+			if (cbvs.contains(v)) {
+				continue;
+			}
+			boolean isRelationship = v.asString().contains("_");
+			var additionalIds = new ArrayList<>(List.of("v$id"));
+			if (isRelationship) {
+				var result = getTables(null, null, v.asString(), new String[] { "RELATIONSHIP" });
+				if (result.next()) {
+					var definition = result.getString(COL_REMARKS).split("\n");
+					additionalIds.add("v$" + definition[0].toLowerCase(Locale.ROOT) + "_id");
+					additionalIds.add("v$" + definition[2].toLowerCase(Locale.ROOT) + "_id");
+				}
+			}
+			for (var additionalId : additionalIds) {
+				if (columnNamePattern != null && !additionalId.matches(columnNamePattern.replace("%", ".*"))) {
+					continue;
+				}
+
+				var values = addColumn(v, Values.value(additionalId), Values.value("String"),
+						DatabaseMetaData.columnNoNulls, "NO", 0, true);
+				rows.add(0, values.toArray(Value[]::new));
 			}
 		}
 
 		var keys = getKeysForGetColumns();
 		var runResponse = createRunResponseForStaticKeys(keys);
-		var staticPullResponse = staticPullResponseFor(keys, rows);
+		var pullResponse = staticPullResponseFor(keys, rows);
 
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), runResponse,
-				staticPullResponse, -1, -1, -1);
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
+	}
+
+	private ArrayList<Value> addColumn(Value nodeLabel, Value propertyName, Value propertyType, int NULLABLE,
+			String IS_NULLABLE, Integer ordinalPosition, boolean generated) throws SQLException {
+		var values = new ArrayList<Value>();
+		values.add(Values.value(getSingleCatalog())); // TABLE_CAT
+		values.add(Values.value(DEFAULT_SCHEMA)); // TABLE_SCHEM is always public
+		values.add(nodeLabel); // TABLE_NAME
+		values.add(propertyName); // COLUMN_NAME
+		var columnType = Neo4jConversions.toSqlTypeFromOldCypherType(propertyType.asString());
+		values.add(Values.value(columnType)); // DATA_TYPE
+		values.add(Values.value(Neo4jConversions.oldCypherTypesToNew(propertyType.asString()))); // TYPE_NAME
+		values.add(getMaxPrecision(columnType)); // COLUMN_SIZE
+		values.add(Values.NULL); // BUFFER_LENGTH
+		values.add(Values.NULL); // DECIMAL_DIGITS
+		values.add(Values.value(2)); // NUM_PREC_RADIX
+		values.add(Values.value(NULLABLE));
+		values.add(Values.NULL); // REMARKS
+		values.add(Values.NULL); // COLUMN_DEF
+		values.add(Values.NULL); // SQL_DATA_TYPE - unused
+		values.add(Values.NULL); // SQL_DATETIME_SUB
+		values.add(Values.NULL); // CHAR_OCTET_LENGTH
+		values.add(Values.value(ordinalPosition)); // ORDINAL_POSITION
+		values.add(Values.value(IS_NULLABLE));
+		values.add(Values.NULL); // SCOPE_CATALOG
+		values.add(Values.NULL); // SCOPE_SCHEMA
+		values.add(Values.NULL); // SCOPE_TABLE
+		values.add(Values.NULL); // SOURCE_DATA_TYPE
+		values.add(Values.value("NO")); // IS_AUTOINCREMENT
+		values.add(Values.value(generated ? "YES" : "NO")); // IS_GENERATEDCOLUMN
+		return values;
 	}
 
 	static PullResponse staticPullResponseFor(List<String> keys, List<Value[]> rows) {
@@ -969,14 +1252,29 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		};
 	}
 
+	static ResultSet resultSetForParameters(Connection connection, Map<String, Object> parameters) throws SQLException {
+		List<String> keys = new ArrayList<>();
+		Value[] columns = new Value[parameters.size()];
+		int i = 0;
+		for (Map.Entry<String, Object> entry : parameters.entrySet()) {
+			String k = entry.getKey();
+			Object v = entry.getValue();
+			keys.add(k);
+			columns[i++] = (v instanceof Value value) ? value : Values.value(v);
+		}
+		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = DatabaseMetadataImpl.staticPullResponseFor(keys, List.<Value[]>of(columns));
+		return new LocalStatementImpl(connection, runResponse, pullResponse).getResultSet();
+	}
+
 	private static Value getTypeFromList(List<Value> types, String propertyName) {
 		if (types.size() > 1) {
 			LOGGER.log(Level.FINE,
-					"More than one property type found for property %s, api will still return first one found.",
+					"More than one property type found for property {0}, api will still return first one found.",
 					propertyName);
 
 			for (var propertyType : types) {
-				if (propertyType.asString().equals("String")) {
+				if (propertyType.asString().toUpperCase(Locale.ROOT).startsWith("STRING")) {
 					return propertyType;
 				}
 			}
@@ -989,28 +1287,28 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 
 	private static List<String> getKeysForGetColumns() {
 		var keys = new ArrayList<String>();
-		keys.add("TABLE_CAT");
-		keys.add("TABLE_SCHEM");
-		keys.add("TABLE_NAME");
-		keys.add("COLUMN_NAME");
-		keys.add("DATA_TYPE");
-		keys.add("TYPE_NAME"); // this will be computed if possible.
-		keys.add("COLUMN_SIZE");
-		keys.add("BUFFER_LENGTH");
-		keys.add("DECIMAL_DIGITS");
-		keys.add("NUM_PREC_RADIX");
-		keys.add("NULLABLE");
-		keys.add("REMARKS");
+		keys.add(COL_TABLE_CAT);
+		keys.add(COL_TABLE_SCHEM);
+		keys.add(COL_TABLE_NAME);
+		keys.add(COL_COLUMN_NAME);
+		keys.add(COL_DATA_TYPE);
+		keys.add(COL_TYPE_NAME); // this will be computed if possible.
+		keys.add(COL_COLUMN_SIZE);
+		keys.add(COL_BUFFER_LENGTH);
+		keys.add(COL_DECIMAL_DIGITS);
+		keys.add(COL_NUM_PREC_RADIX);
+		keys.add(COL_NULLABLE);
+		keys.add(COL_REMARKS);
 		keys.add("COLUMN_DEF");
-		keys.add("SQL_DATA_TYPE");
-		keys.add("SQL_DATETIME_SUB");
-		keys.add("CHAR_OCTET_LENGTH");
-		keys.add("ORDINAL_POSITION");
-		keys.add("IS_NULLABLE");
-		keys.add("SCOPE_CATALOG");
-		keys.add("SCOPE_SCHEMA");
-		keys.add("SCOPE_TABLE");
-		keys.add("SOURCE_DATA_TYPE");
+		keys.add(COL_SQL_DATA_TYPE);
+		keys.add(COL_SQL_DATETIME_SUB);
+		keys.add(COL_CHAR_OCTET_LENGTH);
+		keys.add(COL_ORDINAL_POSITION);
+		keys.add(COL_IS_NULLABLE);
+		keys.add(COL_SCOPE_CATALOG);
+		keys.add(COL_SCOPE_SCHEMA);
+		keys.add(COL_SCOPE_TABLE);
+		keys.add(COL_SOURCE_DATA_TYPE);
 		keys.add("IS_AUTOINCREMENT");
 		keys.add("IS_GENERATEDCOLUMN");
 		return keys;
@@ -1019,57 +1317,140 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	@Override
 	public ResultSet getColumnPrivileges(String catalog, String schema, String table, String columnNamePattern)
 			throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schema);
+
+		var keys = List.of(COL_TABLE_CAT, COL_TABLE_SCHEM, COL_TABLE_NAME, COL_COLUMN_NAME, COL_GRANTOR, COL_GRANTEE,
+				COL_PRIVILEGE, COL_IS_GRANTABLE);
+		return emptyResultSet(keys);
 	}
 
 	@Override
 	public ResultSet getTablePrivileges(String catalog, String schemaPattern, String tableNamePattern)
 			throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schemaPattern);
+
+		var keys = List.of(COL_TABLE_CAT, COL_TABLE_SCHEM, COL_TABLE_NAME, COL_GRANTOR, COL_GRANTEE, COL_PRIVILEGE,
+				COL_IS_GRANTABLE);
+		return emptyResultSet(keys);
 	}
 
 	@Override
 	public ResultSet getBestRowIdentifier(String catalog, String schema, String table, int scope, boolean nullable)
 			throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schema);
+
+		var keys = List.of(COL_SCOPE, COL_COLUMN_NAME, COL_DATA_TYPE, COL_TYPE_NAME, COL_COLUMN_SIZE, COL_BUFFER_LENGTH,
+				COL_DECIMAL_DIGITS, COL_PSEUDO_COLUMN);
+		return emptyResultSet(keys);
 	}
 
 	@Override
 	public ResultSet getVersionColumns(String catalog, String schema, String table) throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schema);
+
+		var keys = List.of(COL_SCOPE, COL_COLUMN_NAME, COL_DATA_TYPE, COL_TYPE_NAME, COL_COLUMN_SIZE, COL_BUFFER_LENGTH,
+				COL_DECIMAL_DIGITS, COL_PSEUDO_COLUMN);
+		return emptyResultSet(keys);
 	}
 
+	@SuppressWarnings("squid:S3776") // Yep, this is complex.
 	@Override
 	public ResultSet getPrimaryKeys(String catalog, String schema, String table) throws SQLException {
 		assertCatalogIsNullOrEmpty(catalog);
 		assertSchemaIsPublicOrNull(schema);
 
 		var keys = new ArrayList<String>();
-		keys.add("TABLE_SCHEM");
-		keys.add("TABLE_CATALOG");
-		keys.add("TABLE_NAME");
-		keys.add("COLUMN_NAME");
-		keys.add("KEY_SEQ");
-		keys.add("PK_NAME");
+		keys.add(COL_TABLE_CATALOG);
+		keys.add(COL_TABLE_SCHEM);
+		keys.add(COL_TABLE_NAME);
+		keys.add(COL_COLUMN_NAME);
+		keys.add(COL_KEY_SEQ);
+		keys.add(COL_PK_NAME);
+		List<Value[]> resultRows = List.of();
 
-		var emptyPullResponse = createEmptyPullResponse();
+		if (table != null) {
+			var finalTable = table;
+			boolean relationshipChecked = false;
+			// Check if it is a virtual table and extract the relationship name
+			if (table.matches(".+?_.+?_.+?")) {
+				var relationships = getTables(catalog, schema, table, new String[] { "RELATIONSHIP" });
+				if (relationships.next()) {
+					relationshipChecked = true;
+					finalTable = relationships.getString(COL_REMARKS).split("\n")[1].trim();
+				}
+				relationships.close();
+			}
+
+			var request = getRequest("getPrimaryKeys", "name", finalTable);
+			var pullResponse = doQueryForPullResponse(request);
+			var records = pullResponse.records();
+
+			var uniqueConstraints = new ArrayList<UniqueConstraint>();
+			for (var record : records) {
+				uniqueConstraints.add(new UniqueConstraint(record.get("name").asString(),
+						record.get("labelsOrTypes").asList(Value::asString),
+						record.get("properties").asList(Value::asString)));
+			}
+
+			// Exactly one unique constraint is fine
+			if (uniqueConstraints.size() == 1) {
+				resultRows = makeUniqueKeyValues(getSingleCatalog(), DEFAULT_SCHEMA, table, uniqueConstraints);
+			}
+			// Otherwise we go with element ids if the "table" exists
+			else {
+				var exists = relationshipChecked;
+				if (!exists) {
+					var tables = getTables(catalog, schema, table, new String[] { "TABLE" });
+					exists = tables.next();
+					tables.close();
+				}
+
+				resultRows = exists
+						? makeUniqueKeyValues(getSingleCatalog(), DEFAULT_SCHEMA, table,
+								List.of(new UniqueConstraint(table + "_elementId", List.of(table), List.of("v$id"))))
+						: List.of();
+
+			}
+		}
+
 		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = staticPullResponseFor(keys, resultRows);
 
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), runResponse,
-				emptyPullResponse, -1, -1, -1);
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
+	}
+
+	private static List<Value[]> makeUniqueKeyValues(String catalog, String schema, String table,
+			List<UniqueConstraint> uniqueConstraints) {
+		List<Value[]> results = new ArrayList<>();
+		for (var uniqueConstraint : uniqueConstraints) {
+			for (var i = 0; i < uniqueConstraint.properties.size(); i++) {
+				results.add(new Value[] { Values.value(catalog), Values.value(schema), Values.value(table),
+						Values.value(uniqueConstraint.properties.get(i)), Values.value(i + 1),
+						Values.value(uniqueConstraint.name) });
+			}
+		}
+		return results;
 	}
 
 	@Override
 	public ResultSet getImportedKeys(String catalog, String schema, String table) throws SQLException {
-		assertCatalogIsNullOrEmpty(catalog);
-		assertSchemaIsPublicOrNull(schema);
-
-		var keys = new ArrayList<String>();
-		return createKeysResultSet(keys);
+		return createEmptyKeysResult(catalog, schema);
 	}
 
 	@Override
 	public ResultSet getExportedKeys(String catalog, String schema, String table) throws SQLException {
+		return createEmptyKeysResult(catalog, schema);
+	}
+
+	private ResultSet createEmptyKeysResult(String catalog, String schema) throws SQLException {
 		assertCatalogIsNullOrEmpty(catalog);
 		assertSchemaIsPublicOrNull(schema);
 
@@ -1077,38 +1458,80 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		return createKeysResultSet(keys);
 	}
 
-	private ResultSet createKeysResultSet(ArrayList<String> keys) {
-		keys.add("PKTABLE_CAT");
-		keys.add("PKTABLE_SCHEM");
-		keys.add("PKTABLE_NAME");
-		keys.add("PKCOLUMN_NAME");
-		keys.add("FKTABLE_CAT");
-		keys.add("FKTABLE_SCHEM");
-		keys.add("FKTABLE_NAME");
-		keys.add("FKCOLUMN_NAME");
-		keys.add("KEY_SEQ");
-		keys.add("UPDATE_RULE");
-		keys.add("DELETE_RULE");
-		keys.add("FK_NAME");
-		keys.add("PK_NAME");
-		keys.add("DEFERRABILITY");
+	private ResultSet createKeysResultSet(ArrayList<String> keys) throws SQLException {
+		keys.add(COL_PKTABLE_CAT);
+		keys.add(COL_PKTABLE_SCHEM);
+		keys.add(COL_PKTABLE_NAME);
+		keys.add(COL_PKCOLUMN_NAME);
+		keys.add(COL_FKTABLE_CAT);
+		keys.add(COL_FKTABLE_SCHEM);
+		keys.add(COL_FKTABLE_NAME);
+		keys.add(COL_FKCOLUMN_NAME);
+		keys.add(COL_KEY_SEQ);
+		keys.add(COL_UPDATE_RULE);
+		keys.add(COL_DELETE_RULE);
+		keys.add(COL_FK_NAME);
+		keys.add(COL_PK_NAME);
+		keys.add(COL_DEFERRABILITY);
 
-		var emptyPullResponse = createEmptyPullResponse();
 		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = createEmptyPullResponse();
 
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), runResponse,
-				emptyPullResponse, -1, -1, -1);
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
 	}
 
 	@Override
 	public ResultSet getCrossReference(String parentCatalog, String parentSchema, String parentTable,
 			String foreignCatalog, String foreignSchema, String foreignTable) throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(parentCatalog);
+		assertSchemaIsPublicOrNull(parentSchema);
+		assertCatalogIsNullOrEmpty(foreignCatalog);
+		assertSchemaIsPublicOrNull(foreignSchema);
+
+		// TODO the remarks on element ids in relationships from getColumns should be
+		// duplicated here in a meaningful way
+		var keys = List.of(COL_PKTABLE_CAT, COL_PKTABLE_SCHEM, COL_PKTABLE_NAME, COL_PKCOLUMN_NAME, COL_FKTABLE_CAT,
+				COL_FKTABLE_SCHEM, COL_FKTABLE_NAME, COL_FKCOLUMN_NAME, COL_KEY_SEQ, COL_UPDATE_RULE, COL_DELETE_RULE,
+				COL_FK_NAME, COL_PK_NAME, COL_DEFERRABILITY);
+		return emptyResultSet(keys);
 	}
 
 	@Override
 	public ResultSet getTypeInfo() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		var keys = List.of(COL_TYPE_NAME, COL_DATA_TYPE, COL_PRECISION, COL_LITERAL_PREFIX, COL_LITERAL_SUFFIX,
+				COL_CREATE_PARAMS, COL_NULLABLE, COL_CASE_SENSITIVE, COL_SEARCHABLE, COL_UNSIGNED_ATTRIBUTE,
+				COL_FIXED_PREC_SCALE, COL_AUTO_INCREMENT, COL_LOCAL_TYPE_NAME, COL_MINIMUM_SCALE, COL_MAXIMUM_SCALE,
+				COL_SQL_DATA_TYPE, COL_SQL_DATETIME_SUB, COL_NUM_PREC_RADIX);
+
+		var values = new ArrayList<Value[]>();
+		for (var type : Type.values()) {
+			var sqlType = Neo4jConversions.toSqlType(type);
+			int columnSearchable;
+			if (type == Type.STRING) {
+				columnSearchable = DatabaseMetaData.typeSearchable;
+			}
+			else if (type != Type.RELATIONSHIP) {
+				columnSearchable = DatabaseMetaData.typePredBasic;
+			}
+			else {
+				columnSearchable = DatabaseMetaData.typePredNone;
+			}
+			var row = new Value[] { Values.value(type.name()), Values.value(sqlType), getMaxPrecision(sqlType),
+					Values.NULL, // Prefix and suffix are actually determined for some, we
+									// should use this at some point
+					Values.NULL, Values.NULL, Values.value(DatabaseMetaData.typeNullable),
+					Values.value(type == Type.STRING), Values.value(columnSearchable), Values.value(false),
+					Values.value(false), Values.NULL, Values.NULL, Values.NULL, Values.NULL, Values.NULL, Values.NULL,
+					Values.value(10), };
+			values.add(row);
+		}
+
+		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = staticPullResponseFor(keys, values);
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
+
 	}
 
 	@Override
@@ -1193,7 +1616,13 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	@Override
 	public ResultSet getUDTs(String catalog, String schemaPattern, String typeNamePattern, int[] types)
 			throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schemaPattern);
+
+		var keys = List.of(COL_TYPE_CAT, COL_TYPE_SCHEM, COL_TYPE_NAME, "CLASS_NAME", COL_DATA_TYPE, COL_REMARKS,
+				"BASE_TYPE");
+		return emptyResultSet(keys);
 	}
 
 	@Override
@@ -1230,18 +1659,37 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 
 	@Override
 	public ResultSet getSuperTypes(String catalog, String schemaPattern, String typeNamePattern) throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schemaPattern);
+
+		var keys = List.of(COL_TYPE_CAT, COL_TYPE_SCHEM, COL_TYPE_NAME, COL_SUPERTYPE_CAT, COL_SUPERTYPE_SCHEM,
+				COL_SUPERTYPE_NAME);
+		return emptyResultSet(keys);
 	}
 
 	@Override
 	public ResultSet getSuperTables(String catalog, String schemaPattern, String tableNamePattern) throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schemaPattern);
+
+		var keys = List.of(COL_TABLE_CAT, COL_TABLE_SCHEM, COL_TABLE_NAME, COL_SUPERTABLE_NAME);
+		return emptyResultSet(keys);
 	}
 
 	@Override
 	public ResultSet getAttributes(String catalog, String schemaPattern, String typeNamePattern,
 			String attributeNamePattern) throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertCatalogIsNullOrEmpty(catalog);
+		assertSchemaIsPublicOrNull(schemaPattern);
+
+		var keys = List.of(COL_TYPE_CAT, COL_TYPE_SCHEM, COL_TYPE_NAME, COL_ATTR_NAME, COL_DATA_TYPE,
+				COL_ATTR_TYPE_NAME, COL_ATTR_SIZE, COL_DECIMAL_DIGITS, COL_NUM_PREC_RADIX, COL_NULLABLE, COL_REMARKS,
+				COL_ATTR_DEF, COL_SQL_DATA_TYPE, COL_SQL_DATETIME_SUB, COL_CHAR_OCTET_LENGTH, COL_ORDINAL_POSITION,
+				COL_IS_NULLABLE, COL_SCOPE_CATALOG, COL_SCOPE_SCHEMA, COL_SCOPE_TABLE, COL_SOURCE_DATA_TYPE);
+		return emptyResultSet(keys);
 	}
 
 	@Override
@@ -1282,40 +1730,51 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public boolean locatorsUpdateCopy() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public boolean locatorsUpdateCopy() {
+		return true;
 	}
 
 	@Override
-	public boolean supportsStatementPooling() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public boolean supportsStatementPooling() {
+		return false;
 	}
 
 	@Override
-	public RowIdLifetime getRowIdLifetime() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public RowIdLifetime getRowIdLifetime() {
+		return RowIdLifetime.ROWID_UNSUPPORTED;
+	}
+
+	@Override
+	public ResultSet getSchemas() throws SQLException {
+		var keys = new ArrayList<String>();
+		keys.add(COL_TABLE_SCHEM);
+		keys.add(COL_TABLE_CATALOG);
+
+		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = staticPullResponseFor(keys, Collections
+			.singletonList(new Value[] { Values.value(DEFAULT_SCHEMA), Values.value(getSingleCatalog()) }));
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
 	}
 
 	@Override
 	public ResultSet getSchemas(String catalog, String schemaPattern) throws SQLException {
-
 		assertCatalogIsNullOrEmpty(catalog);
 
-		if (schemaPattern.equals("public")) {
+		var thePattern = Objects.requireNonNullElse(schemaPattern, DEFAULT_SCHEMA).trim().replace("%", ".*");
+		if (thePattern.isEmpty() || DEFAULT_SCHEMA.matches("(?i)" + thePattern)) {
 			return getSchemas();
 		}
 
 		// return an empty result set if anything other than public is asked for.
 		var keys = new ArrayList<String>();
-		keys.add("TABLE_SCHEM");
-		keys.add("TABLE_CATALOG");
+		keys.add(COL_TABLE_SCHEM);
+		keys.add(COL_TABLE_CATALOG);
 		// return RS with just public in it
-		PullResponse pull = createEmptyPullResponse();
+		PullResponse pullResponse = createEmptyPullResponse();
 
 		var runResponse = createRunResponseForStaticKeys(keys);
 
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), runResponse, pull, -1, -1,
-				-1);
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
 	}
 
 	@Override
@@ -1324,13 +1783,27 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	@Override
-	public boolean autoCommitFailureClosesAllResultSets() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+	public boolean autoCommitFailureClosesAllResultSets() {
+		return true;
 	}
 
 	@Override
 	public ResultSet getClientInfoProperties() throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		var keys = List.of("NAME", "MAX_LEN", "DEFAULT_VALUE", "DESCRIPTION");
+		var values = new ArrayList<Value[]>();
+		for (var property : SUPPORTED_CLIENT_INFO_PROPERTIES) {
+			values.add(new Value[] { Values.value(property.name()), Values.value(65536), Values.NULL,
+					Values.value(property.description()) });
+		}
+		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = staticPullResponseFor(keys, values);
+
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
+	}
+
+	static boolean isSupportedClientInfoProperty(String name) {
+		return SUPPORTED_CLIENT_INFO_PROPERTIES.stream().anyMatch(p -> p.name().equals(name));
 	}
 
 	@Override
@@ -1340,7 +1813,7 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		assertSchemaIsPublicOrNull(schemaPattern);
 
 		return doQueryForResultSet(getRequest("getFunctions", "name", functionNamePattern, "functionType",
-				DatabaseMetaData.functionResultUnknown));
+				DatabaseMetaData.functionResultUnknown, "catalogAsParameterWorkaround", getSingleCatalog()));
 	}
 
 	@Override
@@ -1351,9 +1824,11 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		assertSchemaIsPublicOrNull(schemaPattern);
 
 		var intermediateResults = getArgumentDescriptions("FUNCTIONS", functionNamePattern);
+
 		return doQueryForResultSet(getRequest("getFunctionColumns", "results", intermediateResults, "columnNamePattern",
 				columnNamePattern, "columnType", DatabaseMetaData.functionColumnIn, "nullable",
-				DatabaseMetaData.functionNullableUnknown));
+				DatabaseMetaData.functionNullableUnknown, "catalogAsParameterWorkaround", getSingleCatalog(),
+				"returnType", DatabaseMetaData.functionColumnResult));
 	}
 
 	private List<Map<String, Object>> getArgumentDescriptions(String category, String namePattern) throws SQLException {
@@ -1370,7 +1845,8 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 		try (var rs = doQueryForResultSet(request)) {
 			while (rs.next()) {
 				intermediateResults.add(Map.of("name", rs.getString("name"), "description", rs.getString("description"),
-						"argumentDescriptions", rs.getObject("argumentDescription")));
+						"argumentDescriptions", rs.getObject("argumentDescription"), "returnDescriptions",
+						rs.getObject("returnDescription")));
 			}
 		}
 		return intermediateResults;
@@ -1379,7 +1855,21 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	@Override
 	public ResultSet getPseudoColumns(String catalog, String schemaPattern, String tableNamePattern,
 			String columnNamePattern) throws SQLException {
-		throw new SQLFeatureNotSupportedException();
+
+		assertSchemaIsPublicOrNull(schemaPattern);
+		assertCatalogIsNullOrEmpty(catalog);
+
+		// TODO the generated v$id columns should really move her
+		var keys = List.of(COL_TABLE_CAT, COL_TABLE_SCHEM, COL_TABLE_NAME, COL_COLUMN_NAME, COL_DATA_TYPE,
+				COL_COLUMN_SIZE, COL_DECIMAL_DIGITS, COL_NUM_PREC_RADIX, COL_COLUMN_USAGE, COL_REMARKS,
+				COL_CHAR_OCTET_LENGTH, COL_IS_NULLABLE);
+		return emptyResultSet(keys);
+	}
+
+	private ResultSet emptyResultSet(List<String> keys) throws SQLException {
+		var runResponse = createRunResponseForStaticKeys(keys);
+		var pullResponse = staticPullResponseFor(keys, List.of());
+		return new LocalStatementImpl(this.connection, runResponse, pullResponse).getResultSet();
 	}
 
 	@Override
@@ -1393,7 +1883,7 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 			return iface.cast(this);
 		}
 		else {
-			throw new SQLException("This object does not implement the given interface");
+			throw new Neo4jException(withReason("This object does not implement the given interface"));
 		}
 	}
 
@@ -1436,15 +1926,25 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	private static void assertSchemaIsPublicOrNull(String schemaPattern) throws SQLException {
-		if (schemaPattern != null && !"public".equals(schemaPattern)) {
-			throw new SQLException("Schema must be public or null");
+		if (schemaPattern != null && !DEFAULT_SCHEMA.equalsIgnoreCase(schemaPattern)) {
+			throw new Neo4jException(withReason("Schema must be public or null (was '%s')".formatted(schemaPattern)));
 		}
 	}
 
-	private static void assertCatalogIsNullOrEmpty(String catalog) throws SQLException {
-		if (catalog != null && !catalog.isEmpty()) {
-			throw new SQLException("Catalog is not applicable to Neo4j please leave null");
+	private void assertCatalogIsNullOrEmpty(String catalog) throws SQLException {
+		if (catalog != null && !(catalog.isBlank() || catalog.trim().equalsIgnoreCase(getSingleCatalog()))) {
+			throw new Neo4jException(withReason(
+					"Catalog '%s' is not available in this Neo4j instance, please leave blank or specify the current database name"
+						.formatted(catalog)));
 		}
+	}
+
+	/**
+	 * To have a central point to get the single supported catalog.
+	 * @return the single supported catalog for this connection
+	 */
+	private String getSingleCatalog() throws SQLException {
+		return this.connection.unwrap(Neo4jConnection.class).getDatabaseName();
 	}
 
 	private PullResponse doQueryForPullResponse(Request request) throws SQLException {
@@ -1455,19 +1955,21 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	private ResultSet doQueryForResultSet(Request request) throws SQLException {
 		var response = doQuery(request);
 
-		return new ResultSetImpl(new LocalStatementImpl(), new ThrowingTransactionImpl(), response.runFuture.join(),
-				response.pullResponse, -1, -1, -1);
+		return new LocalStatementImpl(this.connection, response.runFuture.join(), response.pullResponse).getResultSet();
 	}
 
 	private QueryAndRunResponse doQuery(Request request) throws SQLException {
-		var transaction = this.transactionSupplier.getTransaction(Map.of());
-		var newTransaction = Neo4jTransaction.State.NEW.equals(transaction.getState());
+		var transaction = this.connection.unwrap(ConnectionImpl.class).newMetadataTransaction(Map.of());
 		var responses = transaction.runAndPull(request.query, request.args, -1, 0);
-		if (newTransaction) {
-			transaction.rollback();
-		}
+		transaction.commit();
 		return new QueryAndRunResponse(responses.pullResponse(),
 				CompletableFuture.completedFuture(responses.runResponse()));
+	}
+
+	@Override
+	public DatabaseMetaData flush() {
+		this.tablesCache.clear();
+		return this;
 	}
 
 	private record Request(String query, Map<String, Object> args) {
@@ -1475,6 +1977,52 @@ final class DatabaseMetadataImpl implements DatabaseMetaData {
 	}
 
 	private record QueryAndRunResponse(PullResponse pullResponse, CompletableFuture<RunResponse> runFuture) {
+	}
+
+	private record UniqueConstraint(String name, List<String> labelsOrTypes, List<String> properties) {
+	}
+
+	private record ClientInfoProperty(String name, String description) {
+	}
+
+	private record GetTablesCacheKey(String catalog, String schemaPattern, String tableNamePattern, String[] types) {
+		@Override
+		public boolean equals(Object o) {
+			if (!(o instanceof GetTablesCacheKey that)) {
+				return false;
+			}
+			return Objects.equals(this.catalog, that.catalog) && Objects.deepEquals(this.types, that.types)
+					&& Objects.equals(this.schemaPattern, that.schemaPattern)
+					&& Objects.equals(this.tableNamePattern, that.tableNamePattern);
+		}
+
+		@Override
+		public int hashCode() {
+			return Objects.hash(this.catalog, this.schemaPattern, this.tableNamePattern, Arrays.hashCode(this.types));
+		}
+	}
+
+	private record GetTablesCacheValue(RunResponse runResponse, PullResponse pullResponse) {
+
+		static GetTablesCacheValue of(ResultSet resultSet) throws SQLException {
+			var keys = new ArrayList<String>();
+			var metaData = resultSet.getMetaData();
+			var columnCount = metaData.getColumnCount();
+			for (int i = 1; i <= columnCount; ++i) {
+				keys.add(metaData.getColumnName(i));
+			}
+			var values = new ArrayList<Value[]>();
+			while (resultSet.next()) {
+				var row = new Value[columnCount];
+				for (int i = 1; i <= columnCount; ++i) {
+					row[i - 1] = resultSet.getObject(i, Value.class);
+				}
+				values.add(row);
+			}
+			var response = createRunResponseForStaticKeys(keys);
+			var pull = staticPullResponseFor(keys, values);
+			return new GetTablesCacheValue(response, pull);
+		}
 	}
 
 }
