@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023-2024 "Neo4j,"
+ * Copyright (c) 2023-2025 "Neo4j,"
  * Neo4j Sweden AB [https://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -18,9 +18,14 @@
  */
 package org.neo4j.jdbc;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.UncheckedIOException;
 import java.lang.reflect.InvocationTargetException;
+import java.net.URI;
 import java.net.URLDecoder;
+import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.security.GeneralSecurityException;
@@ -28,11 +33,12 @@ import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.DriverPropertyInfo;
 import java.sql.SQLException;
-import java.time.Clock;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -41,24 +47,45 @@ import java.util.Optional;
 import java.util.Properties;
 import java.util.ServiceLoader;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import io.github.cdimascio.dotenv.Dotenv;
-import io.netty.channel.EventLoopGroup;
-import io.netty.channel.nio.NioEventLoopGroup;
-import org.neo4j.jdbc.internal.bolt.AuthTokens;
-import org.neo4j.jdbc.internal.bolt.BoltAgentUtil;
-import org.neo4j.jdbc.internal.bolt.BoltConnectionProvider;
-import org.neo4j.jdbc.internal.bolt.BoltConnectionProviders;
-import org.neo4j.jdbc.internal.bolt.BoltServerAddress;
-import org.neo4j.jdbc.internal.bolt.SecurityPlan;
-import org.neo4j.jdbc.internal.bolt.SecurityPlans;
+import org.neo4j.bolt.connection.AuthToken;
+import org.neo4j.bolt.connection.AuthTokens;
+import org.neo4j.bolt.connection.BoltConnection;
+import org.neo4j.bolt.connection.BoltConnectionProvider;
+import org.neo4j.bolt.connection.BoltConnectionProviderFactory;
+import org.neo4j.bolt.connection.BoltProtocolVersion;
+import org.neo4j.bolt.connection.NotificationConfig;
+import org.neo4j.bolt.connection.SecurityPlan;
+import org.neo4j.bolt.connection.SecurityPlans;
+import org.neo4j.jdbc.Neo4jException.GQLError;
+import org.neo4j.jdbc.authn.spi.Authentication;
+import org.neo4j.jdbc.authn.spi.AuthenticationSupplierFactory;
+import org.neo4j.jdbc.authn.spi.CustomAuthentication;
+import org.neo4j.jdbc.authn.spi.DisabledAuthentication;
+import org.neo4j.jdbc.authn.spi.TokenAuthentication;
+import org.neo4j.jdbc.authn.spi.UsernamePasswordAuthentication;
+import org.neo4j.jdbc.events.ConnectionListener;
+import org.neo4j.jdbc.events.DriverListener;
+import org.neo4j.jdbc.events.DriverListener.ConnectionClosedEvent;
+import org.neo4j.jdbc.events.DriverListener.ConnectionOpenedEvent;
+import org.neo4j.jdbc.internal.bolt.BoltAdapters;
+import org.neo4j.jdbc.tracing.Neo4jTracer;
 import org.neo4j.jdbc.translator.spi.Translator;
 import org.neo4j.jdbc.translator.spi.TranslatorFactory;
+
+import static org.neo4j.jdbc.Neo4jException.withInternal;
+import static org.neo4j.jdbc.Neo4jException.withReason;
 
 /**
  * The main entry point for the Neo4j JDBC driver. There is usually little need to use
@@ -71,44 +98,49 @@ import org.neo4j.jdbc.translator.spi.TranslatorFactory;
 public final class Neo4jDriver implements Neo4jDriverExtensions {
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the host.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the host.
 	 */
 	public static final String PROPERTY_HOST = "host";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the port.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the port.
 	 */
 	public static final String PROPERTY_PORT = "port";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the username.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the username.
 	 */
 	public static final String PROPERTY_USER = "user";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the database.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the database.
 	 */
 	public static final String PROPERTY_DATABASE = "database";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the user-agent.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the user-agent.
 	 */
 	public static final String PROPERTY_USER_AGENT = "agent";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the password.
+	 * The environment and system property key for the user-agent.
+	 */
+	public static final String USER_AGENT_ENV_KEY = "NEO4J_JDBC_USER_AGENT";
+
+	/**
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the password.
 	 */
 	public static final String PROPERTY_PASSWORD = "password";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the auth scheme.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the auth scheme.
 	 * <p>
 	 * Currently supported values are:
 	 * <ul>
@@ -126,25 +158,31 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	public static final String PROPERTY_AUTH_SCHEME = "authScheme";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the auth realm.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the auth realm.
 	 */
 	public static final String PROPERTY_AUTH_REALM = "authRealm";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name}
-	 * containing the timeout.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the authn supplier name.
+	 */
+	public static final String PROPERTY_AUTHN_SUPPLIER = "authn.supplier";
+
+	/**
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} containing
+	 * the timeout.
 	 */
 	public static final String PROPERTY_TIMEOUT = "timeout";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name} used to
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} used to
 	 * enable automatic SQL to Cypher translation.
 	 */
 	public static final String PROPERTY_SQL_TRANSLATION_ENABLED = "enableSQLTranslation";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name} used to
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} used to
 	 * enable the use of causal cluster bookmarks.
 	 */
 	public static final String PROPERTY_USE_BOOKMARKS = "useBookmarks";
@@ -160,7 +198,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	public static final String PROPERTY_REWRITE_PLACEHOLDERS = "rewritePlaceholders";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name} used to
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} used to
 	 * enable automatic translation caching.
 	 */
 	public static final String PROPERTY_SQL_TRANSLATION_CACHING_ENABLED = "cacheSQLTranslations";
@@ -174,9 +212,8 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	public static final String PROPERTY_TRANSLATOR_FACTORY = "translatorFactory";
 
 	/**
-	 * The name of the {@link #getPropertyInfo(String, Properties) property name} that
-	 * enables automatic rewrite of batched prepared statements into batched Cypher
-	 * statements.
+	 * The name of the {@link #getPropertyInfo(String, Properties) property} that enables
+	 * automatic rewrite of batched prepared statements into batched Cypher statements.
 	 */
 	public static final String PROPERTY_REWRITE_BATCHED_STATEMENTS = "rewriteBatchedStatements";
 
@@ -186,6 +223,12 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * {@literal "true"} (SSL enabled) and {@literal "false"} (SSL disabled).
 	 */
 	public static final String PROPERTY_SSL = "ssl";
+
+	/**
+	 * Use this to configure the sample size for determining the relationship types
+	 * between labels. Defaults to {@literal 1000}.
+	 */
+	public static final String PROPERTY_RELATIONSHIP_SAMPLE_SIZE = "relationshipSampleSize";
 
 	/**
 	 * An optional configuration for fine-grained control over SSL configuration. Allowed
@@ -199,18 +242,21 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 */
 	public static final String PROPERTY_SSL_MODE = "sslMode";
 
-	private static final EventLoopGroup eventLoopGroup = new NioEventLoopGroup(new DriverThreadFactory());
+	private static final String URL_REGEX = "^jdbc:neo4j(?:\\+(?<transport>s(?:sc)?)?)?(?::(?<protocol>https?))?://(?<host>[^:/?]+):?(?<port>\\d+)?/?(?<database>[^?]+)?\\??(?<urlParams>\\S+)?$";
 
-	private static final String URL_REGEX = "^jdbc:neo4j(?:\\+(?<transport>s(?:sc)?)?)?://(?<host>[^:/?]+):?(?<port>\\d+)?/?(?<database>[^?]+)?\\??(?<urlParams>\\S+)?$";
+	/**
+	 * The URL pattern that this driver supports.
+	 * @since 6.2.0
+	 */
+	public static final Pattern URL_PATTERN = Pattern.compile(URL_REGEX);
 
-	private static final Pattern URL_PATTERN = Pattern.compile(URL_REGEX);
+	private static final BoltProtocolVersion MIN_BOLT_VERSION = new BoltProtocolVersion(5, 1);
+
+	private static final Map<String, Object> BOLT_CONNECTION_OPTIONS = Map.of("eventLoopThreadNamePrefix",
+			"Neo4jJDBCDriverIO", "maxVersion", new BoltProtocolVersion(5, 8));
 
 	/*
-	 * This is the recommended - and AFAIK - required way to register a new driver the
-	 * default way. The driver manager will use the service loader mechanism to load all
-	 * drivers and that in turn will trigger the static initializer block. We would also
-	 * have the chance here to register a <code>DriverAction</code> that will be notified
-	 * on deregistration.
+	 * Register one default instance globally.
 	 */
 	static {
 		try {
@@ -221,33 +267,90 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		}
 	}
 
-	private final BoltConnectionProvider boltConnectionProvider;
-
-	private volatile List<TranslatorFactory> sqlTranslatorFactories;
-
-	private final Map<DriverConfig, BookmarkManager> bookmarkManagers = new ConcurrentHashMap<>();
-
-	private final Map<String, Object> transactionMetadata = new ConcurrentHashMap<>();
-
 	/**
 	 * Lets you configure the driver from the environment, but always enable SQL to Cypher
 	 * translation.
-	 * @return a builder that lets you create a driver from the environment.
+	 * @return a builder that lets you create a connection from the environment.
+	 * @deprecated the return type will change to
+	 * {@link SpecifyAdditionalPropertiesOrAuthStep} in the next major version, with all
+	 * existing fluent api, plus the ability to configure authentication
 	 * @see SpecifyTranslationStep
+	 * @see SpecifyAuthStep
 	 */
+	@SuppressWarnings("DeprecatedIsStillUsed")
+	@Deprecated(since = "6.6.0")
 	public static SpecifyAdditionalPropertiesStep withSQLTranslation() {
-		return new BuilderImpl(true, Map.of());
+		return new SpecifyAdditionalPropertiesOrAuthStepImpl(new BuilderImpl(true, Map.of(), null));
 	}
 
 	/**
 	 * Lets you configure the driver from the environment, with additional properties
 	 * being applied as well.
 	 * @param additionalProperties additional properties to be added to the configuration
-	 * @return a builder that lets you create a driver from the environment.
+	 * @return a builder that lets you create a connection from the environment.
+	 * @deprecated the return type will change to {@link SpecifyTranslationOrAuthStep} in
+	 * the next major version, with all existing fluent api, plus the ability to configure
+	 * authentication
+	 * @see SpecifyAdditionalPropertiesStep
+	 * @see SpecifyAuthStep
+	 */
+	@SuppressWarnings("DeprecatedIsStillUsed")
+	@Deprecated(since = "6.6.0")
+	public static SpecifyTranslationStep withProperties(Map<String, Object> additionalProperties) {
+		return new SpecifyTranslationOrAuthStepImpl(new BuilderImpl(false, additionalProperties, null));
+	}
+
+	/**
+	 * Registers a supplier of {@link Authentication authentications} for the
+	 * {@link Neo4jDriver drivers} registered with the {@link DriverManager}. This allows
+	 * {@link DriverManager#getConnection(String)} and its overloads to use that
+	 * authentication supplier. If the provider is not {@literal null}, all {@code user}
+	 * and {@code password} keys from the JDBC properties or environment will be ignored.
+	 * @param authenticationSupplier the authentication supplier that shall be used with
+	 * the drivers registered on the {@link DriverManager}
+	 */
+	public static void registerAuthenticationSupplier(Supplier<Authentication> authenticationSupplier) {
+		iterateGlobalNeo4jDrivers(driver -> driver.setAuthenticationSupplier(authenticationSupplier));
+	}
+
+	/**
+	 * Registers a supplier of {@link Authentication authentications} for the
+	 * {@link Neo4jDriver drivers} registered with the {@link DriverManager}. This allows
+	 * {@link DriverManager#getConnection(String)} and its overloads to use that
+	 * authentication supplier. If the provider is not {@literal null}, all {@code user}
+	 * and {@code password} keys from the JDBC properties or environment will be ignored.
+	 * @param tracer the tracer that shall be used on the drivers registered on the
+	 * {@link DriverManager}
+	 */
+	public static void registerTracer(Neo4jTracer tracer) {
+		iterateGlobalNeo4jDrivers(driver -> driver.setTracer(tracer));
+	}
+
+	private static void iterateGlobalNeo4jDrivers(Consumer<Neo4jDriver> callback) {
+		var drivers = DriverManager.getDrivers();
+		while (drivers.hasMoreElements()) {
+			if (drivers.nextElement() instanceof Neo4jDriver neo4jDriver) {
+				callback.accept(neo4jDriver);
+			}
+		}
+	}
+
+	/**
+	 * Lets you configure a new instance of the driver from the environment, starting with
+	 * the authentication supplier. You can later enable sql translation or add additional
+	 * properties.
+	 * @param authenticationSupplier the authentication provider to use, can be
+	 * {@literal null}
+	 * @return a builder that lets you create a new connection from the environment or
+	 * specify more features
+	 * @since 6.6.0
+	 * @see SpecifyTranslationStep
 	 * @see SpecifyAdditionalPropertiesStep
 	 */
-	public static SpecifyTranslationStep withProperties(Map<String, Object> additionalProperties) {
-		return new BuilderImpl(false, additionalProperties);
+	public static SpecifyAdditionalPropertiesOrTranslationStep withAuthenticationSupplier(
+			Supplier<Authentication> authenticationSupplier) {
+		return new SpecifyAdditionalPropertiesOrTranslationStepImpl(
+				new BuilderImpl(false, Map.of(), authenticationSupplier));
 	}
 
 	/**
@@ -295,8 +398,31 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * @see SpecifyEnvStep#fromEnv(Path, String)
 	 */
 	public static Optional<Connection> fromEnv(Path directory, String filename) throws SQLException {
-		return new BuilderImpl(false, Map.of()).fromEnv(directory, filename);
+		return new BuilderImpl(false, Map.of(), null).fromEnv(directory, filename);
 	}
+
+	private final List<BoltConnectionProviderFactory> boltConnectionProviderFactories;
+
+	private final Map<String, BoltConnectionProvider> providerCache = new ConcurrentHashMap<>();
+
+	private final Lazy<List<TranslatorFactory>> sqlTranslatorFactories = Lazy
+		.of(() -> this.loadServices(TranslatorFactory.class));
+
+	private final Lazy<Map<String, AuthenticationSupplierFactory>> authenticationSupplierFactories = Lazy
+		.of(() -> this.loadServices(AuthenticationSupplierFactory.class)
+			.stream()
+			.collect(Collectors.collectingAndThen(
+					Collectors.toMap(AuthenticationSupplierFactory::getName, Function.identity()), Map::copyOf)));
+
+	private final Map<DriverConfig, BookmarkManager> bookmarkManagers = new ConcurrentHashMap<>();
+
+	private final Map<String, Object> transactionMetadata = new ConcurrentHashMap<>();
+
+	private final Set<DriverListener> listeners = new HashSet<>();
+
+	private Neo4jTracer tracer;
+
+	private Supplier<Authentication> authenticationSupplier;
 
 	/**
 	 * Creates a new instance of the {@link Neo4jDriver}. The instance is usable and is
@@ -305,42 +431,31 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * machinery for JDBC.
 	 */
 	public Neo4jDriver() {
-		this(BoltConnectionProviders.netty(eventLoopGroup, Clock.systemUTC()));
+		this(List.of());
 	}
 
-	Neo4jDriver(BoltConnectionProvider boltConnectionProvider) {
-		this.boltConnectionProvider = boltConnectionProvider;
+	Neo4jDriver(List<BoltConnectionProviderFactory> boltConnectionProviderFactories) {
+		this.boltConnectionProviderFactories = boltConnectionProviderFactories.isEmpty()
+				? this.loadServices(BoltConnectionProviderFactory.class) : List.copyOf(boltConnectionProviderFactories);
+		MetricsCollector.tryGlobal().ifPresent(this::addListener);
 	}
 
 	@Override
 	public Connection connect(String url, Properties info) throws SQLException {
-		var driverConfig = DriverConfig.of(url, info);
+		return connect(url, info, null);
+	}
 
-		var address = new BoltServerAddress(driverConfig.host, driverConfig.port);
+	@Override
+	public Connection connect(String url, Properties info, Supplier<Authentication> authenticationSupplier)
+			throws SQLException {
+
+		var driverConfig = DriverConfig.of(url, info);
 
 		var securityPlan = parseSSLParams(driverConfig.sslProperties);
 
 		var databaseName = driverConfig.database;
-
-		var user = (driverConfig.user == null || driverConfig.user.isBlank()) ? "" : driverConfig.user;
-		var password = (driverConfig.password == null || driverConfig.password.isBlank()) ? "" : driverConfig.password;
-		var authRealm = (driverConfig.authRealm == null || driverConfig.authRealm.isBlank()) ? null
-				: driverConfig.authRealm;
-		var authToken = switch (driverConfig.authScheme) {
-			case NONE -> AuthTokens.none();
-			case BASIC -> AuthTokens.basic(user, password, authRealm);
-			case BEARER -> AuthTokens.bearer(password);
-			case KERBEROS -> AuthTokens.kerberos(password);
-		};
-
-		var boltAgent = BoltAgentUtil.boltAgent();
 		var userAgent = driverConfig.agent;
 		var connectTimeoutMillis = driverConfig.timeout;
-
-		var boltConnection = this.boltConnectionProvider
-			.connect(address, securityPlan, databaseName, authToken, boltAgent, userAgent, connectTimeoutMillis)
-			.toCompletableFuture()
-			.join();
 
 		var enableSqlTranslation = driverConfig.enableSQLTranslation;
 		var enableTranslationCaching = driverConfig.enableTranslationCaching;
@@ -348,20 +463,179 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		var rewritePlaceholders = driverConfig.rewritePlaceholders;
 		var translatorFactory = driverConfig.rawConfig.get(PROPERTY_TRANSLATOR_FACTORY);
 		var bookmarkManager = this.bookmarkManagers.computeIfAbsent(driverConfig,
-				k -> driverConfig.useBookmarks ? new DefaultBookmarkManagerImpl() : new VoidBookmarkManagerImpl());
+				k -> driverConfig.useBookmarks ? new DefaultBookmarkManagerImpl() : new NoopBookmarkManagerImpl());
 
-		Supplier<List<TranslatorFactory>> translatorFactoriesSupplier = this::getSqlTranslatorFactories;
+		Supplier<List<TranslatorFactory>> translatorFactoriesSupplier = this.sqlTranslatorFactories::resolve;
 		if (translatorFactory != null && !translatorFactory.isBlank()) {
 			translatorFactoriesSupplier = () -> getSqlTranslatorFactory(translatorFactory);
 		}
-		return new ConnectionImpl(boltConnection,
+
+		var finalAuthenticationSupplier = determineAuthenticationSupplier(authenticationSupplier, driverConfig);
+		var targetUrl = driverConfig.toUrl();
+
+		var connectionListeners = new ArrayList<ConnectionListener>();
+		this.listeners.forEach(listener -> {
+			if (listener instanceof ConnectionListener connectionListener) {
+				connectionListeners.add(connectionListener);
+			}
+		});
+
+		var connection = new ConnectionImpl(targetUrl, finalAuthenticationSupplier,
+				authentication -> establishBoltConnection(driverConfig, userAgent, connectTimeoutMillis, securityPlan,
+						toAuthToken(authentication)),
 				getSqlTranslatorSupplier(enableSqlTranslation, driverConfig.rawConfig(), translatorFactoriesSupplier),
 				enableSqlTranslation, enableTranslationCaching, rewriteBatchedStatements, rewritePlaceholders,
-				bookmarkManager, this.transactionMetadata);
+				bookmarkManager, this.transactionMetadata, driverConfig.relationshipSampleSize(), databaseName,
+				aborted -> {
+					var event = new ConnectionClosedEvent(targetUrl, aborted);
+					Events.notify(this.listeners, listener -> listener.onConnectionClosed(event));
+				}, connectionListeners);
+
+		synchronized (this) {
+			if (this.tracer != null) {
+				connection.addListener(new Tracing(this.tracer, connection));
+			}
+		}
+
+		Events.notify(this.listeners, listener -> listener.onConnectionOpened(new ConnectionOpenedEvent(targetUrl)));
+		return connection;
+	}
+
+	Supplier<Authentication> determineAuthenticationSupplier(Supplier<Authentication> authenticationSupplier,
+			DriverConfig driverConfig) {
+
+		if (authenticationSupplier != null) {
+			return authenticationSupplier;
+		}
+
+		var user = (driverConfig.user == null || driverConfig.user.isBlank()) ? "" : driverConfig.user;
+		var password = (driverConfig.password == null || driverConfig.password.isBlank()) ? "" : driverConfig.password;
+		if (driverConfig.rawConfig().containsKey(PROPERTY_AUTHN_SUPPLIER)) {
+			var factory = this.authenticationSupplierFactories.resolve()
+				.get(driverConfig.rawConfig().get(PROPERTY_AUTHN_SUPPLIER));
+			if (factory != null) {
+				var prefix = "authn.%s.".formatted(factory.getName().toLowerCase(Locale.ROOT));
+				return factory.create(user, password,
+						driverConfig.rawConfig.entrySet()
+							.stream()
+							.filter(e -> e.getKey().toLowerCase(Locale.ROOT).startsWith(prefix))
+							.collect(Collectors.toMap(e -> e.getKey().replace(prefix, ""), Map.Entry::getValue)));
+			}
+		}
+
+		synchronized (this) {
+			if (this.authenticationSupplier != null) {
+				return this.authenticationSupplier;
+			}
+		}
+
+		var authRealm = (driverConfig.authRealm == null || driverConfig.authRealm.isBlank()) ? null
+				: driverConfig.authRealm;
+		var authentication = switch (driverConfig.authScheme) {
+			case NONE -> Authentication.none();
+			case BASIC -> Authentication.usernameAndPassword(user, password, authRealm);
+			case BEARER -> Authentication.bearer(password);
+			case KERBEROS -> Authentication.kerberos(password);
+		};
+		return () -> authentication;
+	}
+
+	static AuthToken toAuthToken(Authentication authentication) {
+
+		var valueFactory = BoltAdapters.getValueFactory();
+		if (authentication instanceof DisabledAuthentication) {
+			return AuthTokens.none(valueFactory);
+		}
+		else if (authentication instanceof UsernamePasswordAuthentication usernameAndPassword) {
+			return AuthTokens.basic(usernameAndPassword.username(), usernameAndPassword.password(),
+					usernameAndPassword.realm(), valueFactory);
+		}
+		else if (authentication instanceof TokenAuthentication token) {
+			return switch (token.scheme().toLowerCase(Locale.ROOT)) {
+				case "bearer" -> AuthTokens.bearer(token.value(), valueFactory);
+				case "kerberos" -> AuthTokens.kerberos(token.value(), valueFactory);
+				default -> throw new IllegalArgumentException(
+						"Invalid scheme `%s` for token based authentication".formatted(token.scheme()));
+			};
+		}
+		else if (authentication instanceof CustomAuthentication customAuthentication) {
+			return AuthTokens.custom(BoltAdapters.adaptMap(customAuthentication.toMap()));
+		}
+
+		throw new IllegalArgumentException("Unsupported authentication type %s".formatted(authentication));
+	}
+
+	private BoltConnection establishBoltConnection(DriverConfig driverConfig, String userAgent,
+			int connectTimeoutMillis, SecurityPlan securityPlan, AuthToken authToken) {
+
+		var targetUri = URI
+			.create("%s://%s%s".formatted(driverConfig.protocol(), driverConfig.host(), driverConfig.formattedPort()));
+
+		var connectionProvider = this.providerCache.computeIfAbsent(targetUri.getScheme(),
+				scheme -> this.boltConnectionProviderFactories.stream()
+					.filter(factory -> factory.supports(scheme))
+					.findFirst()
+					.map(factory -> factory.create(BoltAdapters.newLoggingProvider(), BoltAdapters.getValueFactory(),
+							null, BOLT_CONNECTION_OPTIONS))
+					.orElseThrow(() -> new RuntimeException(
+							"Failed to load a connection provider supporting target %s".formatted(targetUri))));
+
+		return connectionProvider
+			.connect(targetUri, null, BoltAdapters.newAgent(ProductVersion.getValue()), userAgent, connectTimeoutMillis,
+					securityPlan, authToken, MIN_BOLT_VERSION, NotificationConfig.defaultConfig())
+			.toCompletableFuture()
+			.join();
 	}
 
 	static String getDefaultUserAgent() {
-		return "neo4j-jdbc/%s".formatted(ProductVersion.getValue());
+		if (System.getProperties().containsKey(USER_AGENT_ENV_KEY)
+				&& !System.getProperties().getProperty(USER_AGENT_ENV_KEY).isBlank()) {
+			return System.getProperties().getProperty(USER_AGENT_ENV_KEY);
+		}
+		if (System.getenv().containsKey(USER_AGENT_ENV_KEY) && !System.getenv().get(USER_AGENT_ENV_KEY).isBlank()) {
+			return System.getenv().get(USER_AGENT_ENV_KEY);
+		}
+
+		return loadUserAgentFromResources("META-INF/neo4j-jdbc-user-agent.txt")
+			.orElseGet(() -> "neo4j-jdbc/%s".formatted(ProductVersion.getValue()));
+	}
+
+	static Optional<String> loadUserAgentFromResources(String name) {
+
+		var processed = new HashSet<String>();
+		try {
+			var resources = Neo4jDriver.class.getClassLoader().getResources(name);
+			var ua = new StringBuilder();
+			while (resources.hasMoreElements()) {
+				var resource = resources.nextElement();
+				// Avoid the expensive equals method of URL
+				if (!processed.add(resource.toString())) {
+					continue;
+				}
+				try (var in = new BufferedReader(
+						new InputStreamReader(resource.openStream(), StandardCharsets.UTF_8))) {
+					var skip = new AtomicBoolean(false);
+					in.lines().filter(line -> !line.startsWith("#")).forEach(str -> {
+						if (str.startsWith("====")) {
+							var current = skip.get();
+							skip.set(!current);
+							return;
+						}
+
+						if (!(skip.get() || str.isBlank())) {
+							ua.append(str.trim());
+						}
+					});
+				}
+			}
+			if (ua.isEmpty()) {
+				return Optional.empty();
+			}
+			return Optional.of(ua.toString());
+		}
+		catch (IOException ex) {
+			throw new UncheckedIOException(ex);
+		}
 	}
 
 	static Map<String, String> mergeConfig(String[] urlParams, Properties jdbcProperties) {
@@ -390,7 +664,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	@Override
 	public boolean acceptsURL(String url) throws SQLException {
 		if (url == null) {
-			throw new SQLException("url cannot be null");
+			throw new Neo4jException(GQLError.$22000.withMessage("url cannot be null"));
 		}
 
 		return URL_PATTERN.matcher(url).matches();
@@ -506,21 +780,21 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		return switch (sslProperties.sslMode) {
 			case REQUIRE -> {
 				try {
-					yield SecurityPlans.forAllCertificates();
+					yield SecurityPlans.encryptedForAnyCertificate();
 				}
 				catch (GeneralSecurityException ex) {
-					throw new SQLException(ex);
+					throw new Neo4jException(withInternal(ex));
 				}
 			}
 			case VERIFY_FULL -> {
 				try {
-					yield SecurityPlans.forSystemCASignedCertificates();
+					yield SecurityPlans.encryptedForSystemCASignedCertificates();
 				}
 				catch (GeneralSecurityException | IOException ex) {
-					throw new SQLException(ex);
+					throw new Neo4jException(withInternal(ex));
 				}
 			}
-			case DISABLE -> SecurityPlans.insecure();
+			case DISABLE -> null;
 		};
 	}
 
@@ -537,6 +811,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		}
 	}
 
+	@SuppressWarnings("squid:S3776") // Yep, this is complex.
 	private static SSLProperties parseSSLProperties(Map<String, String> info, String transport) throws SQLException {
 		var sslMode = sslMode(info.get(PROPERTY_SSL_MODE));
 		Boolean ssl = null;
@@ -545,7 +820,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		var sslString = info.get(PROPERTY_SSL);
 		if (sslString != null) {
 			if (!sslString.equals("true") && !sslString.equals("false")) {
-				throw new SQLException("Invalid SSL option, accepts true or false");
+				throw new Neo4jException(GQLError.$22N11.withMessage("Invalid SSL option, accepts true or false"));
 			}
 
 			ssl = Boolean.parseBoolean(sslString);
@@ -554,8 +829,8 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		if (transport != null) {
 			if (transport.equals("s")) {
 				if (ssl != null && !ssl) {
-					throw new SQLException(
-							"Invalid transport option +s when ssl option set to false, accepted ssl option is true");
+					throw new Neo4jException(GQLError.$22N11.withMessage(
+							"Invalid transport option +s when ssl option set to false, accepted ssl option is true"));
 				}
 
 				ssl = true;
@@ -565,15 +840,15 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 				}
 				else {
 					if (sslMode == SSLMode.DISABLE) {
-						throw new SQLException(
-								"Invalid SSLMode %s for +s transport option, accepts verify-ca, verify-full, require");
+						throw new Neo4jException(GQLError.$22N11.withMessage(
+								"Invalid SSLMode %s for +s transport option, accepts verify-ca, verify-full, require"));
 					}
 				}
 			}
 			else if (transport.equals("ssc")) {
 				if (ssl != null && !ssl) {
-					throw new SQLException(
-							"Invalid transport option +ssc when ssl option set to false, accepted ssl option is true");
+					throw new Neo4jException(GQLError.$22N11.withMessage(
+							"Invalid transport option +ssc when ssl option set to false, accepted ssl option is true"));
 				}
 				ssl = true;
 
@@ -581,11 +856,13 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 					sslMode = SSLMode.REQUIRE;
 				}
 				else if (sslMode != SSLMode.REQUIRE) {
-					throw new SQLException("Invalid SSLMode %s for +scc transport option, accepts 'require' only");
+					throw new Neo4jException(GQLError.$22N11
+						.withMessage("Invalid SSLMode %s for +scc transport option, accepts 'require' only"));
 				}
 			}
 			else if (!transport.isEmpty()) {
-				throw new SQLException("Invalid Transport section of the URL, accepts +s or +scc");
+				throw new Neo4jException(
+						GQLError.$22N11.withMessage("Invalid Transport section of the URL, accepts +s or +scc"));
 			}
 		}
 
@@ -607,14 +884,14 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		// Validation
 		if (ssl) {
 			if (sslMode != SSLMode.VERIFY_FULL && sslMode != SSLMode.REQUIRE) {
-				throw new SQLException(
-						String.format("Invalid sslMode %s when ssl = true, accepts verify-full and require", sslMode));
+				throw new Neo4jException(GQLError.$22N11.withMessage(
+						"Invalid sslMode %s when ssl = true, accepts verify-full and require".formatted(sslMode)));
 			}
 		}
 		else {
 			if (sslMode != SSLMode.DISABLE) {
-				throw new SQLException(String
-					.format("Invalid sslMode %s when ssl = false, accepts disable, allow and prefer", sslMode));
+				throw new Neo4jException(GQLError.$22N11.withMessage(
+						"Invalid sslMode %s when ssl = false, accepts disable, allow and prefer".formatted(sslMode)));
 
 			}
 		}
@@ -640,29 +917,11 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 		return List.of();
 	}
 
-	/**
-	 * Tries to load all available {@link TranslatorFactory SqlTranslator factories} via
-	 * the {@link ServiceLoader} machinery. Throws an exception if there is no
-	 * implementation on the class- or module-path.
-	 * @return a collection containing at least one {@link TranslatorFactory}
-	 */
-	private List<TranslatorFactory> getSqlTranslatorFactories() {
-
-		List<TranslatorFactory> result = this.sqlTranslatorFactories;
-		if (result == null) {
-			synchronized (this) {
-				result = this.sqlTranslatorFactories;
-				if (result == null) {
-					this.sqlTranslatorFactories = ServiceLoader
-						.load(TranslatorFactory.class, this.getClass().getClassLoader())
-						.stream()
-						.map(ServiceLoader.Provider::get)
-						.toList();
-					result = this.sqlTranslatorFactories;
-				}
-			}
-		}
-		return result;
+	private <T> List<T> loadServices(Class<T> type) {
+		return ServiceLoader.load(type, this.getClass().getClassLoader())
+			.stream()
+			.map(ServiceLoader.Provider::get)
+			.toList();
 	}
 
 	static Supplier<List<Translator>> getSqlTranslatorSupplier(boolean automaticSqlTranslation, Map<String, ?> config,
@@ -688,14 +947,19 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	}
 
 	static SQLException noTranslatorsAvailableException() {
-		return new SQLException("No translators available");
+		return new Neo4jException(withReason("No translators available"));
 	}
 
 	private static List<Translator> sortedListOfTranslators(Map<String, ?> config, List<TranslatorFactory> factories) {
 		if (factories.size() == 1) {
-			return List.of(factories.get(0).create(config));
+			var t1 = factories.get(0).create(config);
+			return (t1 != null) ? List.of(t1) : List.of();
 		}
-		return factories.stream().map(factory -> factory.create(config)).sorted(TranslatorComparator.INSTANCE).toList();
+		return factories.stream()
+			.map(factory -> factory.create(config))
+			.filter(Objects::nonNull)
+			.sorted(TranslatorComparator.INSTANCE)
+			.toList();
 	}
 
 	@Override
@@ -716,6 +980,28 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	}
 
 	@Override
+	public void addListener(DriverListener driverListener) {
+		this.listeners.add(Objects.requireNonNull(driverListener));
+	}
+
+	@SuppressWarnings("removal")
+	@Override
+	public Neo4jDriver withTracer(Neo4jTracer tracer) {
+		this.setTracer(tracer);
+		return this;
+	}
+
+	@Override
+	public synchronized void setTracer(Neo4jTracer tracer) {
+		this.tracer = tracer;
+	}
+
+	@Override
+	public synchronized void setAuthenticationSupplier(Supplier<Authentication> authenticationSupplier) {
+		this.authenticationSupplier = authenticationSupplier;
+	}
+
+	@Override
 	public Neo4jDriver withMetadata(Map<String, Object> metadata) {
 		if (metadata != null) {
 			this.transactionMetadata.putAll(metadata);
@@ -729,7 +1015,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 			return iface.cast(this);
 		}
 		else {
-			throw new SQLException("This object does not implement the given interface");
+			throw new Neo4jException(withReason("This object does not implement the given interface"));
 		}
 	}
 
@@ -740,7 +1026,18 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 
 	enum SSLMode {
 
-		DISABLE("disable"), REQUIRE("require"), VERIFY_FULL("verify-full");
+		/**
+		 * Disables SSL completely.
+		 */
+		DISABLE("disable"),
+		/**
+		 * Require SSL but don't do a full certificate verification.
+		 */
+		REQUIRE("require"),
+		/**
+		 * Require SSL and fully verify the certificate chain.
+		 */
+		VERIFY_FULL("verify-full");
 
 		private final String name;
 
@@ -761,11 +1058,34 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * @param ssl boolean dictating if ssl is enabled
 	 */
 	record SSLProperties(SSLMode sslMode, boolean ssl) {
+
+		String protocolSuffix() {
+			if (!this.ssl) {
+				return "";
+			}
+			return (this.sslMode == SSLMode.VERIFY_FULL) ? "+s" : "+ssc";
+		}
 	}
 
 	enum AuthScheme {
 
-		NONE("none"), BASIC("basic"), BEARER("bearer"), KERBEROS("kerberos");
+		/**
+		 * Disable authentication.
+		 */
+		NONE("none"),
+		/**
+		 * Use basic auth (username and password).
+		 */
+		BASIC("basic"),
+		/**
+		 * Use a token as authentication (the password will be treated as JWT or other SSO
+		 * token).
+		 */
+		BEARER("bearer"),
+		/**
+		 * Use Kerberos authentication.
+		 */
+		KERBEROS("kerberos");
 
 		private final String name;
 
@@ -783,6 +1103,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * Internal record class to handle parsing of driver config.
 	 *
 	 * @param host host name
+	 * @param protocol the underlying protocol in use
 	 * @param port port
 	 * @param database database name
 	 * @param authScheme auth scheme
@@ -797,14 +1118,15 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * @param rewriteBatchedStatements rewrite batched statements to be more efficient
 	 * @param rewritePlaceholders rewrite ? to $0 .. $n
 	 * @param useBookmarks enables the use of causal cluster bookmarks
+	 * @param relationshipSampleSize Sample size for determining relationship types
 	 * @param sslProperties ssl properties
 	 * @param rawConfig Unprocessed configuration options
 	 */
-
-	record DriverConfig(String host, int port, String database, AuthScheme authScheme, String user, String password,
-			String authRealm, String agent, int timeout, boolean enableSQLTranslation, boolean enableTranslationCaching,
-			boolean rewriteBatchedStatements, boolean rewritePlaceholders, boolean useBookmarks,
-			SSLProperties sslProperties, Map<String, String> rawConfig) {
+	record DriverConfig(String host, String protocol, Integer port, String database, AuthScheme authScheme, String user,
+			String password, String authRealm, String agent, int timeout, boolean enableSQLTranslation,
+			boolean enableTranslationCaching, boolean rewriteBatchedStatements, boolean rewritePlaceholders,
+			boolean useBookmarks, int relationshipSampleSize, SSLProperties sslProperties,
+			Map<String, String> rawConfig) {
 
 		private static final Set<String> DRIVER_SPECIFIC_PROPERTIES = Set.of(PROPERTY_HOST, PROPERTY_PORT,
 				PROPERTY_DATABASE, PROPERTY_AUTH_SCHEME, PROPERTY_USER, PROPERTY_PASSWORD, PROPERTY_AUTH_REALM,
@@ -813,7 +1135,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 				PROPERTY_REWRITE_PLACEHOLDERS, PROPERTY_SSL, PROPERTY_SSL_MODE);
 
 		DriverConfig {
-			rawConfig = Map.copyOf(rawConfig);
+			rawConfig = Collections.unmodifiableMap(new TreeMap<>(rawConfig));
 		}
 
 		/**
@@ -834,15 +1156,20 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 			return misc;
 		}
 
+		// This is about the neo4j constant, which is meant to be either protocol or
+		// default user or default database, I don't feel having a shared constant for it
+		@SuppressWarnings("squid:S1192")
 		static DriverConfig of(String url, Properties info) throws SQLException {
-			if (url == null || info == null) {
-				throw new SQLException("url and info cannot be null");
+			if (url == null) {
+				throw new Neo4jException(GQLError.$22N06.withTemplatedMessage("url"));
 			}
-
+			if (info == null) {
+				throw new Neo4jException(GQLError.$22N06.withTemplatedMessage("info"));
+			}
 			var matcher = URL_PATTERN.matcher(url);
 
 			if (!matcher.matches()) {
-				throw new SQLException("Invalid url");
+				throw new Neo4jException(GQLError.$22N11.withTemplatedMessage(url));
 			}
 
 			var urlParams = splitUrlParams(matcher.group("urlParams"));
@@ -850,10 +1177,19 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 			var config = mergeConfig(urlParams, info);
 			var raw = new HashMap<>(config);
 
+			var protocol = Optional.ofNullable(matcher.group("protocol")).orElse("neo4j");
+
 			var host = matcher.group(PROPERTY_HOST);
 			raw.put(PROPERTY_HOST, host);
 			var rawPort = matcher.group(PROPERTY_PORT);
-			var port = Integer.parseInt((rawPort != null) ? matcher.group("port") : "7687");
+			Integer port = null;
+			if ("neo4j".equals(protocol)) {
+				port = Integer.parseInt((rawPort != null) ? rawPort : "7687");
+			}
+			else if (rawPort != null) {
+				port = Integer.parseInt(rawPort);
+			}
+
 			if (rawPort != null) {
 				raw.put(PROPERTY_PORT, matcher.group(PROPERTY_PORT));
 			}
@@ -872,7 +1208,7 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 			var authScheme = authScheme(config.get(PROPERTY_AUTH_SCHEME));
 
 			var user = String.valueOf(config.getOrDefault(PROPERTY_USER, "neo4j"));
-			var password = String.valueOf(config.getOrDefault(PROPERTY_PASSWORD, "password"));
+			var password = String.valueOf(config.getOrDefault(PROPERTY_PASSWORD, ""));
 			var authRealm = config.getOrDefault(PROPERTY_AUTH_REALM, "");
 
 			var userAgent = String.valueOf(config.getOrDefault(PROPERTY_USER_AGENT, getDefaultUserAgent()));
@@ -886,10 +1222,17 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 			var rewritePlaceholders = Boolean.parseBoolean(
 					config.getOrDefault(PROPERTY_REWRITE_PLACEHOLDERS, Boolean.toString(!automaticSqlTranslation)));
 			var useBookmarks = Boolean.parseBoolean(config.getOrDefault(PROPERTY_USE_BOOKMARKS, "true"));
+			var relationshipSampleSize = Integer
+				.parseInt(config.getOrDefault(PROPERTY_RELATIONSHIP_SAMPLE_SIZE, "1000"));
+			if (relationshipSampleSize < -1) {
+				throw new Neo4jException(
+						GQLError.$22N02.withMessage("Sample size for relationships must be greater than or equal -1"));
+			}
 
-			return new DriverConfig(host, port, databaseName, authScheme, user, password, authRealm, userAgent,
-					connectionTimeoutMillis, automaticSqlTranslation, enableTranslationCaching,
-					rewriteBatchedStatements, rewritePlaceholders, useBookmarks, sslProperties, raw);
+			return new DriverConfig(host, protocol, port, databaseName, authScheme, user, password, authRealm,
+					userAgent, connectionTimeoutMillis, automaticSqlTranslation, enableTranslationCaching,
+					rewriteBatchedStatements, rewritePlaceholders, useBookmarks, relationshipSampleSize, sslProperties,
+					raw);
 		}
 
 		private static AuthScheme authScheme(String scheme) throws IllegalArgumentException {
@@ -901,8 +1244,32 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 				return AuthScheme.valueOf(scheme.toUpperCase(Locale.ROOT));
 			}
 			catch (IllegalArgumentException ignored) {
-				throw new IllegalArgumentException(String.format("%s is not a valid option for authScheme", scheme));
+				throw new IllegalArgumentException("%s is not a valid option for authScheme".formatted(scheme));
 			}
+		}
+
+		String formattedPort() {
+			return (this.port() != null) ? (":" + this.port()) : "";
+		}
+
+		URI toUrl() {
+			var sslProperties = this.sslProperties();
+			var result = new StringBuilder("jdbc:neo4j%s%s://%s%s/%s?".formatted(sslProperties.protocolSuffix(),
+					"neo4j".equals(this.protocol()) ? "" : ":" + this.protocol(), this.host(), this.formattedPort(),
+					this.database()));
+			append(result, PROPERTY_SQL_TRANSLATION_ENABLED, this.enableSQLTranslation()).append("&");
+			append(result, PROPERTY_SQL_TRANSLATION_CACHING_ENABLED, this.enableTranslationCaching()).append("&");
+			append(result, PROPERTY_REWRITE_BATCHED_STATEMENTS, this.rewriteBatchedStatements()).append("&");
+			append(result, PROPERTY_REWRITE_PLACEHOLDERS, this.rewriteBatchedStatements()).append("&");
+			append(result, PROPERTY_USE_BOOKMARKS, this.useBookmarks()).append("&");
+			return URI.create(result.substring(0, result.length() - 1));
+		}
+
+		static StringBuilder append(StringBuilder result, String name, Object value) {
+			result.append(URLEncoder.encode(name, StandardCharsets.UTF_8))
+				.append("=")
+				.append(URLEncoder.encode(String.valueOf(value), StandardCharsets.UTF_8));
+			return result;
 		}
 
 	}
@@ -981,9 +1348,169 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	}
 
 	/**
+	 * Allows to configure additional properties or SQL translation.
+	 *
+	 * @since 6.6.0
+	 */
+	public sealed interface SpecifyAdditionalPropertiesOrTranslationStep extends SpecifyEnvStep
+			permits SpecifyAdditionalPropertiesOrTranslationStepImpl {
+
+		/**
+		 * Call this to specify any additional properties. The environment has precedence.
+		 * Especially username, password and host will always be taken from the
+		 * environment.
+		 * @param additionalProperties any additional properties.
+		 * @return final step to retrieve a driver from the environment
+		 */
+		SpecifyTranslationStep withProperties(Map<String, Object> additionalProperties);
+
+		/**
+		 * Call to enable SQL to Cypher translation.
+		 * @return final step to retrieve a driver from the environment
+		 */
+		SpecifyAdditionalPropertiesStep withSQLTranslation();
+
+	}
+
+	private static final class SpecifyAdditionalPropertiesOrTranslationStepImpl
+			implements SpecifyAdditionalPropertiesOrTranslationStep {
+
+		private final BuilderImpl delegate;
+
+		private SpecifyAdditionalPropertiesOrTranslationStepImpl(BuilderImpl delegate) {
+			this.delegate = delegate;
+		}
+
+		@Override
+		public SpecifyTranslationStep withProperties(Map<String, Object> additionalProperties) {
+			return (SpecifyTranslationStep) this.delegate.withProperties(additionalProperties);
+		}
+
+		@Override
+		public SpecifyAdditionalPropertiesStep withSQLTranslation() {
+			return (SpecifyAdditionalPropertiesStep) this.delegate.withSQLTranslation();
+		}
+
+		@Override
+		public Optional<Connection> fromEnv(Path directory, String filename) throws SQLException {
+			return this.delegate.fromEnv(directory, filename);
+		}
+
+	}
+
+	/**
+	 * Allows to configure additional properties or the authentication provider.
+	 *
+	 * @since 6.6.0
+	 */
+	public sealed interface SpecifyAdditionalPropertiesOrAuthStep extends SpecifyEnvStep
+			permits SpecifyAdditionalPropertiesOrAuthStepImpl {
+
+		/**
+		 * Call this to specify any additional properties. The environment has precedence.
+		 * Especially username, password and host will always be taken from the
+		 * environment.
+		 * @param additionalProperties any additional properties.
+		 * @return the next step that lets you either configure an authentication supplier
+		 * or retrieve a driver from the environment
+		 */
+		SpecifyAuthStep withProperties(Map<String, Object> additionalProperties);
+
+		/**
+		 * Call this to specify an authentication supplier.
+		 * @param authenticationSupplier the authentication provider to use, can be
+		 * {@literal null}
+		 * @return the next step that lets you either configure additional properties or
+		 * retrieve a driver from the environment
+		 */
+		SpecifyAdditionalPropertiesStep withAuthenticationSupplier(Supplier<Authentication> authenticationSupplier);
+
+	}
+
+	private static final class SpecifyAdditionalPropertiesOrAuthStepImpl
+			implements SpecifyAdditionalPropertiesStep, SpecifyAdditionalPropertiesOrAuthStep {
+
+		private final BuilderImpl delegate;
+
+		private SpecifyAdditionalPropertiesOrAuthStepImpl(BuilderImpl delegate) {
+			this.delegate = delegate;
+		}
+
+		@Override
+		public SpecifyAuthStep withProperties(Map<String, Object> additionalProperties) {
+			return (SpecifyAuthStep) this.delegate.withProperties(additionalProperties);
+		}
+
+		@Override
+		public SpecifyAdditionalPropertiesStep withAuthenticationSupplier(
+				Supplier<Authentication> authenticationSupplier) {
+			return (SpecifyAdditionalPropertiesStep) this.delegate.withAuthenticationSupplier(authenticationSupplier);
+		}
+
+		@Override
+		public Optional<Connection> fromEnv(Path directory, String filename) throws SQLException {
+			return this.delegate.fromEnv(directory, filename);
+		}
+
+	}
+
+	/**
+	 * Allows to configure SQL translation or the authentication provider.
+	 *
+	 * @since 6.6.0
+	 */
+	public sealed interface SpecifyTranslationOrAuthStep extends SpecifyEnvStep
+			permits SpecifyTranslationOrAuthStepImpl {
+
+		/**
+		 * Call to enable SQL to Cypher translation.
+		 * @return the next step that lets you either configure an authentication supplier
+		 * or retrieve a driver from the environment
+		 */
+		SpecifyAuthStep withSQLTranslation();
+
+		/**
+		 * Call this to specify an authentication supplier.
+		 * @param authenticationSupplier the authentication provider to use, can be
+		 * {@literal null}
+		 * @return the next step that lets you either enable SQL translation or retrieve a
+		 * driver from the environment
+		 */
+		SpecifyTranslationStep withAuthenticationSupplier(Supplier<Authentication> authenticationSupplier);
+
+	}
+
+	private static final class SpecifyTranslationOrAuthStepImpl
+			implements SpecifyTranslationStep, SpecifyTranslationOrAuthStep {
+
+		private final BuilderImpl delegate;
+
+		private SpecifyTranslationOrAuthStepImpl(BuilderImpl delegate) {
+			this.delegate = delegate;
+		}
+
+		@Override
+		public SpecifyAuthStep withSQLTranslation() {
+			return (SpecifyAuthStep) this.delegate.withSQLTranslation();
+		}
+
+		@Override
+		public SpecifyTranslationStep withAuthenticationSupplier(Supplier<Authentication> authenticationSupplier) {
+			return (SpecifyTranslationStep) this.delegate.withAuthenticationSupplier(authenticationSupplier);
+		}
+
+		@Override
+		public Optional<Connection> fromEnv(Path directory, String filename) throws SQLException {
+			return this.delegate.fromEnv(directory, filename);
+		}
+
+	}
+
+	/**
 	 * Responsible for configuring the optional SQL to Cypher translation.
 	 */
-	public interface SpecifyTranslationStep extends SpecifyEnvStep {
+	public sealed interface SpecifyTranslationStep extends SpecifyEnvStep
+			permits BuilderImpl, SpecifyTranslationOrAuthStepImpl {
 
 		/**
 		 * Call to enable SQL to Cypher translation.
@@ -999,7 +1526,8 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 	 * host settings from the driver, but merely used in addition for everything not taken
 	 * from the environment.
 	 */
-	public interface SpecifyAdditionalPropertiesStep extends SpecifyEnvStep {
+	public sealed interface SpecifyAdditionalPropertiesStep extends SpecifyEnvStep
+			permits BuilderImpl, SpecifyAdditionalPropertiesOrAuthStepImpl {
 
 		/**
 		 * Call this to specify any additional properties. The environment has precedence.
@@ -1012,17 +1540,40 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 
 	}
 
-	private static final class BuilderImpl implements SpecifyAdditionalPropertiesStep, SpecifyTranslationStep {
+	/**
+	 * Allows to configure the authentication provider.
+	 *
+	 * @since 6.6.0
+	 */
+	public sealed interface SpecifyAuthStep extends SpecifyEnvStep permits BuilderImpl {
+
+		/**
+		 * Call this to specify an authentication supplier.
+		 * @param authenticationSupplier the authentication provider to use, can be
+		 * {@literal null}
+		 * @return the final step to retrieve a driver from the environment
+		 */
+		SpecifyEnvStep withAuthenticationSupplier(Supplier<Authentication> authenticationSupplier);
+
+	}
+
+	private static final class BuilderImpl
+			implements SpecifyAdditionalPropertiesStep, SpecifyTranslationStep, SpecifyAuthStep {
 
 		private boolean forceSqlTranslation;
 
 		private Map<String, Object> additionalProperties;
 
-		BuilderImpl(boolean forceSqlTranslation, Map<String, Object> additionalProperties) {
+		private Supplier<Authentication> authenticationSupplier;
+
+		BuilderImpl(boolean forceSqlTranslation, Map<String, Object> additionalProperties,
+				Supplier<Authentication> authenticationSupplier) {
 			this.forceSqlTranslation = forceSqlTranslation;
 			this.additionalProperties = additionalProperties;
+			this.authenticationSupplier = authenticationSupplier;
 		}
 
+		@SuppressWarnings("squid:S3776") // Yep, this is complex.
 		@Override
 		public Optional<Connection> fromEnv(Path directory, String filename) throws SQLException {
 
@@ -1041,39 +1592,45 @@ public final class Neo4jDriver implements Neo4jDriverExtensions {
 			if (address != null && !address.toLowerCase(Locale.ROOT).startsWith("jdbc:")) {
 				address = "jdbc:" + address;
 			}
-			if (address != null && Neo4jDriver.URL_PATTERN.matcher(address).matches()) {
-				var properties = new Properties();
-				properties.putAll(this.additionalProperties);
-
-				var username = env.get("NEO4J_USERNAME");
-				if (username != null) {
-					properties.put(Neo4jDriver.PROPERTY_USER, username);
-				}
-				var password = env.get("NEO4J_PASSWORD");
-				if (password != null) {
-					properties.put(Neo4jDriver.PROPERTY_PASSWORD, password);
-				}
-				var authScheme = env.get("NEO4J_AUTH_SCHEME");
-				if (authScheme != null) {
-					properties.put(Neo4jDriver.PROPERTY_AUTH_SCHEME, authScheme);
-				}
-				var authRealm = env.get("NEO4J_AUTH_REALM");
-				if (authRealm != null) {
-					properties.put(Neo4jDriver.PROPERTY_AUTH_REALM, authRealm);
-				}
-				var sql2cypher = env.get("NEO4J_SQL_TRANSLATION_ENABLED");
-				if (this.forceSqlTranslation || Boolean.parseBoolean(sql2cypher)) {
-					properties.put(Neo4jDriver.PROPERTY_SQL_TRANSLATION_ENABLED, "true");
-				}
-				return Optional.of(new Neo4jDriver().connect(address, properties));
+			if (address == null || !Neo4jDriver.URL_PATTERN.matcher(address).matches()) {
+				return Optional.empty();
 			}
+			var properties = new Properties();
+			properties.putAll(this.additionalProperties);
 
-			return Optional.empty();
+			var username = env.get("NEO4J_USERNAME");
+			if (username != null) {
+				properties.put(Neo4jDriver.PROPERTY_USER, username);
+			}
+			var password = env.get("NEO4J_PASSWORD");
+			if (password != null) {
+				properties.put(Neo4jDriver.PROPERTY_PASSWORD, password);
+			}
+			var authScheme = env.get("NEO4J_AUTH_SCHEME");
+			if (authScheme != null) {
+				properties.put(Neo4jDriver.PROPERTY_AUTH_SCHEME, authScheme);
+			}
+			var authRealm = env.get("NEO4J_AUTH_REALM");
+			if (authRealm != null) {
+				properties.put(Neo4jDriver.PROPERTY_AUTH_REALM, authRealm);
+			}
+			var sql2cypher = env.get("NEO4J_SQL_TRANSLATION_ENABLED");
+			if (this.forceSqlTranslation || Boolean.parseBoolean(sql2cypher)) {
+				properties.put(Neo4jDriver.PROPERTY_SQL_TRANSLATION_ENABLED, "true");
+			}
+			return Optional.of(new Neo4jDriver().connect(address, properties, this.authenticationSupplier));
+
 		}
 
 		@Override
 		public SpecifyEnvStep withProperties(Map<String, Object> additionalProperties) {
 			this.additionalProperties = Objects.requireNonNullElseGet(additionalProperties, Map::of);
+			return this;
+		}
+
+		@Override
+		public SpecifyEnvStep withAuthenticationSupplier(Supplier<Authentication> authenticationSupplier) {
+			this.authenticationSupplier = authenticationSupplier;
 			return this;
 		}
 
